@@ -20,22 +20,16 @@
 
 package com.jetbrains.youtrack.db.internal.core.index;
 
-import com.jetbrains.youtrack.db.api.exception.BaseException;
-import com.jetbrains.youtrack.db.api.exception.RecordNotFoundException;
 import com.jetbrains.youtrack.db.api.record.Identifiable;
-import com.jetbrains.youtrack.db.internal.core.db.DatabaseSessionInternal;
-import com.jetbrains.youtrack.db.internal.core.db.record.MultiValueChangeEvent;
 import com.jetbrains.youtrack.db.internal.core.db.record.MultiValueChangeTimeLine;
 import com.jetbrains.youtrack.db.internal.core.db.record.TrackedMultiValue;
 import com.jetbrains.youtrack.db.internal.core.metadata.schema.SchemaImmutableClass;
 import com.jetbrains.youtrack.db.internal.core.record.impl.EntityImpl;
-import com.jetbrains.youtrack.db.internal.core.record.impl.EntityInternalUtils;
+import com.jetbrains.youtrack.db.internal.core.tx.FrontendTransaction;
 import it.unimi.dsi.fastutil.objects.Object2IntOpenHashMap;
 import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.Collection;
 import java.util.HashSet;
-import java.util.Iterator;
 import java.util.List;
 import java.util.Set;
 
@@ -45,90 +39,95 @@ import java.util.Set;
 public class ClassIndexManager {
 
   public static void checkIndexesAfterCreate(
-      EntityImpl entity, DatabaseSessionInternal database) {
-    entity = checkForLoading(database, entity);
-    processIndexOnCreate(database, entity);
+      EntityImpl entity, FrontendTransaction transaction) {
+    processIndexOnCreate(transaction, entity);
   }
 
-  public static void reIndex(DatabaseSessionInternal session, EntityImpl entity,
+  public static void reIndex(FrontendTransaction transaction, EntityImpl entity,
       Index index) {
-    entity = checkForLoading(session, entity);
-    addIndexEntry(session, entity, entity.getIdentity(), index);
+    addIndexEntry(transaction, entity, entity.getIdentity(), index);
   }
 
-  public static void processIndexOnCreate(DatabaseSessionInternal database,
+  private static void processIndexOnCreate(FrontendTransaction transaction,
       EntityImpl entity) {
-    final SchemaImmutableClass cls = EntityInternalUtils.getImmutableSchemaClass(database, entity);
+    SchemaImmutableClass cls = null;
+    if (entity != null) {
+      cls = entity.getImmutableSchemaClass(transaction.getDatabaseSession());
+    }
     if (cls != null) {
       final Collection<Index> indexes = cls.getRawIndexes();
-      addIndexesEntries(database, entity, indexes);
+      addIndexesEntries(transaction, entity, indexes);
     }
   }
 
   public static void checkIndexesAfterUpdate(
-      EntityImpl entity, DatabaseSessionInternal database) {
-    entity = checkForLoading(database, entity);
-    processIndexOnUpdate(database, entity);
+      EntityImpl entity, FrontendTransaction transaction) {
+    processIndexOnUpdate(transaction, entity);
   }
 
-  public static void processIndexOnUpdate(DatabaseSessionInternal database,
+  private static void processIndexOnUpdate(FrontendTransaction transaction,
       EntityImpl entity) {
-    final SchemaImmutableClass cls = EntityInternalUtils.getImmutableSchemaClass(database, entity);
+    SchemaImmutableClass cls = null;
+    if (entity != null) {
+      cls = entity.getImmutableSchemaClass(transaction.getDatabaseSession());
+    }
     if (cls == null) {
       return;
     }
 
     final Collection<Index> indexes = cls.getRawIndexes();
     if (!indexes.isEmpty()) {
-      final Set<String> dirtyFields = new HashSet<>(Arrays.asList(entity.getDirtyFields()));
+      var dirtyProperties = entity.getDirtyPropertiesBetweenCallbacksInternal(false, false);
+      var dirtyFields = new HashSet<>(dirtyProperties);
+
       if (!dirtyFields.isEmpty()) {
-        for (final Index index : indexes) {
-          processIndexUpdate(database, entity, dirtyFields, index);
+        for (final var index : indexes) {
+          processIndexUpdate(transaction, entity, dirtyFields, index);
         }
       }
     }
   }
 
   public static void checkIndexesAfterDelete(
-      EntityImpl entity, DatabaseSessionInternal database) {
-    processIndexOnDelete(database, entity);
+      EntityImpl entity, FrontendTransaction transaction) {
+    processIndexOnDelete(transaction, entity);
   }
 
   private static void processCompositeIndexUpdate(
-      DatabaseSessionInternal session,
+      FrontendTransaction transaction,
       final Index index,
       final Set<String> dirtyFields,
       final EntityImpl iRecord) {
-    final CompositeIndexDefinition indexDefinition =
+    final var indexDefinition =
         (CompositeIndexDefinition) index.getDefinition();
 
-    final List<String> indexFields = indexDefinition.getFields();
-    final String multiValueField = indexDefinition.getMultiValueField();
+    final var indexProperties = indexDefinition.getProperties();
+    final var multiValueField = indexDefinition.getMultiValueField();
 
-    for (final String indexField : indexFields) {
+    for (final var indexField : indexProperties) {
       if (dirtyFields.contains(indexField)) {
-        final List<Object> origValues = new ArrayList<>(indexFields.size());
+        final List<Object> origValues = new ArrayList<>(indexProperties.size());
 
-        for (final String field : indexFields) {
+        for (final var field : indexProperties) {
           if (!field.equals(multiValueField)) {
             if (dirtyFields.contains(field)) {
               origValues.add(iRecord.getOriginalValue(field));
             } else {
-              origValues.add(iRecord.field(field));
+              origValues.add(iRecord.getProperty(field));
             }
           }
         }
 
         if (multiValueField == null) {
-          final Object origValue = indexDefinition.createValue(session, origValues);
-          final Object newValue = indexDefinition.getDocumentValueToIndex(session, iRecord);
+          final var origValue = indexDefinition.createValue(transaction, origValues);
+          final var newValue = indexDefinition.getDocumentValueToIndex(transaction, iRecord);
 
           if (!indexDefinition.isNullValuesIgnored() || origValue != null) {
-            addRemove(session, index, origValue, iRecord);
+            addRemove(transaction, index, origValue, iRecord);
           }
 
           if (!indexDefinition.isNullValuesIgnored() || newValue != null) {
-            addPut(session, index, newValue, iRecord.getIdentity());
+            addPut(transaction, index, newValue, iRecord.getIdentity());
           }
         } else {
           final MultiValueChangeTimeLine<?, ?> multiValueChangeTimeLine =
@@ -140,50 +139,51 @@ public class ClassIndexManager {
                   iRecord.getOriginalValue(multiValueField));
             } else {
               origValues.add(
-                  indexDefinition.getMultiValueDefinitionIndex(), iRecord.field(multiValueField));
+                  indexDefinition.getMultiValueDefinitionIndex(),
+                  iRecord.getPropertyInternal(multiValueField));
             }
 
-            final Object origValue = indexDefinition.createValue(session, origValues);
-            final Object newValue = indexDefinition.getDocumentValueToIndex(session, iRecord);
+            final var origValue = indexDefinition.createValue(transaction, origValues);
+            final var newValue = indexDefinition.getDocumentValueToIndex(transaction, iRecord);
 
-            processIndexUpdateFieldAssignment(session, index, iRecord, origValue, newValue);
+            processIndexUpdateFieldAssignment(transaction, index, iRecord, origValue, newValue);
           } else {
             // in case of null values support and empty collection field we put null placeholder in
             // place where collection item should be located so we can not use "fast path" to
             // update index values
             if (dirtyFields.size() == 1 && indexDefinition.isNullValuesIgnored()) {
-              final Object2IntOpenHashMap<CompositeKey> keysToAdd = new Object2IntOpenHashMap<>();
+              final var keysToAdd = new Object2IntOpenHashMap<CompositeKey>();
               keysToAdd.defaultReturnValue(-1);
-              final Object2IntOpenHashMap<CompositeKey> keysToRemove =
-                  new Object2IntOpenHashMap<>();
+              final var keysToRemove =
+                  new Object2IntOpenHashMap<CompositeKey>();
               keysToRemove.defaultReturnValue(-1);
 
-              for (MultiValueChangeEvent<?, ?> changeEvent :
+              for (var changeEvent :
                   multiValueChangeTimeLine.getMultiValueChangeEvents()) {
                 indexDefinition.processChangeEvent(
-                    session, changeEvent, keysToAdd, keysToRemove, origValues.toArray());
+                    transaction, changeEvent, keysToAdd, keysToRemove, origValues.toArray());
               }
 
               for (final Object keyToRemove : keysToRemove.keySet()) {
-                addRemove(session, index, keyToRemove, iRecord);
+                addRemove(transaction, index, keyToRemove, iRecord);
               }
 
               for (final Object keyToAdd : keysToAdd.keySet()) {
-                addPut(session, index, keyToAdd, iRecord.getIdentity());
+                addPut(transaction, index, keyToAdd, iRecord.getIdentity());
               }
             } else {
-              @SuppressWarnings("rawtypes") final TrackedMultiValue fieldValue = iRecord.field(
+              @SuppressWarnings("rawtypes") final TrackedMultiValue fieldValue = iRecord.getProperty(
                   multiValueField);
-              @SuppressWarnings("unchecked") final Object restoredMultiValue =
-                  fieldValue.returnOriginalState(session,
+              @SuppressWarnings("unchecked") final var restoredMultiValue =
+                  fieldValue.returnOriginalState(transaction,
                       multiValueChangeTimeLine.getMultiValueChangeEvents());
 
               origValues.add(indexDefinition.getMultiValueDefinitionIndex(), restoredMultiValue);
 
-              final Object origValue = indexDefinition.createValue(session, origValues);
-              final Object newValue = indexDefinition.getDocumentValueToIndex(session, iRecord);
+              final var origValue = indexDefinition.createValue(transaction, origValues);
+              final var newValue = indexDefinition.getDocumentValueToIndex(transaction, iRecord);
 
-              processIndexUpdateFieldAssignment(session, index, iRecord, origValue, newValue);
+              processIndexUpdateFieldAssignment(transaction, index, iRecord, origValue, newValue);
             }
           }
         }
@@ -196,15 +196,15 @@ public class ClassIndexManager {
       final Index index,
       final Set<String> dirtyFields,
       final EntityImpl iRecord,
-      DatabaseSessionInternal session) {
-    final IndexDefinition indexDefinition = index.getDefinition();
-    final List<String> indexFields = indexDefinition.getFields();
+      FrontendTransaction transaction) {
+    final var indexDefinition = index.getDefinition();
+    final var indexFields = indexDefinition.getProperties();
 
     if (indexFields.isEmpty()) {
       return;
     }
 
-    final String indexField = indexFields.get(0);
+    final var indexField = indexFields.getFirst();
     if (!dirtyFields.contains(indexField)) {
       return;
     }
@@ -212,39 +212,40 @@ public class ClassIndexManager {
     final MultiValueChangeTimeLine<?, ?> multiValueChangeTimeLine =
         iRecord.getCollectionTimeLine(indexField);
     if (multiValueChangeTimeLine != null) {
-      final IndexDefinitionMultiValue indexDefinitionMultiValue =
+      final var indexDefinitionMultiValue =
           (IndexDefinitionMultiValue) indexDefinition;
-      final Object2IntOpenHashMap<Object> keysToAdd = new Object2IntOpenHashMap<>();
+      final var keysToAdd = new Object2IntOpenHashMap<Object>();
       keysToAdd.defaultReturnValue(-1);
-      final Object2IntOpenHashMap<Object> keysToRemove = new Object2IntOpenHashMap<>();
+      final var keysToRemove = new Object2IntOpenHashMap<Object>();
       keysToRemove.defaultReturnValue(-1);
 
-      for (MultiValueChangeEvent<?, ?> changeEvent :
+      for (var changeEvent :
           multiValueChangeTimeLine.getMultiValueChangeEvents()) {
-        indexDefinitionMultiValue.processChangeEvent(session, changeEvent, keysToAdd, keysToRemove);
+        indexDefinitionMultiValue.processChangeEvent(transaction, changeEvent, keysToAdd,
+            keysToRemove);
       }
 
-      for (final Object keyToRemove : keysToRemove.keySet()) {
-        addRemove(session, index, keyToRemove, iRecord);
+      for (final var keyToRemove : keysToRemove.keySet()) {
+        addRemove(transaction, index, keyToRemove, iRecord);
       }
 
-      for (final Object keyToAdd : keysToAdd.keySet()) {
-        addPut(session, index, keyToAdd, iRecord.getIdentity());
+      for (final var keyToAdd : keysToAdd.keySet()) {
+        addPut(transaction, index, keyToAdd, iRecord.getIdentity());
       }
 
     } else {
-      final Object origValue =
-          indexDefinition.createValue(session, iRecord.getOriginalValue(indexField));
-      final Object newValue = indexDefinition.getDocumentValueToIndex(session, iRecord);
+      final var origValue =
+          indexDefinition.createValue(transaction, iRecord.getOriginalValue(indexField));
+      final var newValue = indexDefinition.getDocumentValueToIndex(transaction, iRecord);
 
-      processIndexUpdateFieldAssignment(session, index, iRecord, origValue, newValue);
+      processIndexUpdateFieldAssignment(transaction, index, iRecord, origValue, newValue);
     }
   }
 
   private static void processIndexUpdateFieldAssignment(
-      DatabaseSessionInternal session, Index index, EntityImpl iRecord, final Object origValue,
+      FrontendTransaction transaction, Index index, EntityImpl iRecord, final Object origValue,
       final Object newValue) {
-    final IndexDefinition indexDefinition = index.getDefinition();
+    final var indexDefinition = index.getDefinition();
     if ((origValue instanceof Collection) && (newValue instanceof Collection)) {
       final Set<Object> valuesToRemove = new HashSet<>((Collection<?>) origValue);
       final Set<Object> valuesToAdd = new HashSet<>((Collection<?>) newValue);
@@ -252,51 +253,51 @@ public class ClassIndexManager {
       valuesToRemove.removeAll((Collection<?>) newValue);
       valuesToAdd.removeAll((Collection<?>) origValue);
 
-      for (final Object valueToRemove : valuesToRemove) {
+      for (final var valueToRemove : valuesToRemove) {
         if (!indexDefinition.isNullValuesIgnored() || valueToRemove != null) {
-          addRemove(session, index, valueToRemove, iRecord);
+          addRemove(transaction, index, valueToRemove, iRecord);
         }
       }
 
-      for (final Object valueToAdd : valuesToAdd) {
+      for (final var valueToAdd : valuesToAdd) {
         if (!indexDefinition.isNullValuesIgnored() || valueToAdd != null) {
-          addPut(session, index, valueToAdd, iRecord);
+          addPut(transaction, index, valueToAdd, iRecord);
         }
       }
     } else {
-      deleteIndexKey(session, index, iRecord, origValue);
+      deleteIndexKey(transaction, index, iRecord, origValue);
       if (newValue instanceof Collection) {
-        for (final Object newValueItem : (Collection<?>) newValue) {
-          addPut(session, index, newValueItem, iRecord.getIdentity());
+        for (final var newValueItem : (Collection<?>) newValue) {
+          addPut(transaction, index, newValueItem, iRecord.getIdentity());
         }
       } else if (!indexDefinition.isNullValuesIgnored() || newValue != null) {
-        addPut(session, index, newValue, iRecord.getIdentity());
+        addPut(transaction, index, newValue, iRecord.getIdentity());
       }
     }
   }
 
   private static boolean processCompositeIndexDelete(
-      DatabaseSessionInternal session,
+      FrontendTransaction transaction,
       final Index index,
       final Set<String> dirtyFields,
       final EntityImpl iRecord) {
-    final CompositeIndexDefinition indexDefinition =
+    final var indexDefinition =
         (CompositeIndexDefinition) index.getDefinition();
 
-    final String multiValueField = indexDefinition.getMultiValueField();
+    final var multiValueField = indexDefinition.getMultiValueField();
 
-    final List<String> indexFields = indexDefinition.getFields();
-    for (final String indexField : indexFields) {
+    final var indexFields = indexDefinition.getProperties();
+    for (final var indexField : indexFields) {
       // REMOVE IT
       if (dirtyFields.contains(indexField)) {
         final List<Object> origValues = new ArrayList<>(indexFields.size());
 
-        for (final String field : indexFields) {
+        for (final var field : indexFields) {
           if (!field.equals(multiValueField)) {
             if (dirtyFields.contains(field)) {
               origValues.add(iRecord.getOriginalValue(field));
             } else {
-              origValues.add(iRecord.field(field));
+              origValues.add(iRecord.getProperty(field));
             }
           }
         }
@@ -305,10 +306,10 @@ public class ClassIndexManager {
           final MultiValueChangeTimeLine<?, ?> multiValueChangeTimeLine =
               iRecord.getCollectionTimeLine(multiValueField);
           if (multiValueChangeTimeLine != null) {
-            @SuppressWarnings("rawtypes") final TrackedMultiValue fieldValue = iRecord.field(
+            @SuppressWarnings("rawtypes") final TrackedMultiValue fieldValue = iRecord.getProperty(
                 multiValueField);
-            @SuppressWarnings("unchecked") final Object restoredMultiValue =
-                fieldValue.returnOriginalState(session,
+            @SuppressWarnings("unchecked") final var restoredMultiValue =
+                fieldValue.returnOriginalState(transaction,
                     multiValueChangeTimeLine.getMultiValueChangeEvents());
             origValues.add(indexDefinition.getMultiValueDefinitionIndex(), restoredMultiValue);
           } else if (dirtyFields.contains(multiValueField)) {
@@ -317,12 +318,13 @@ public class ClassIndexManager {
                 iRecord.getOriginalValue(multiValueField));
           } else {
             origValues.add(
-                indexDefinition.getMultiValueDefinitionIndex(), iRecord.field(multiValueField));
+                indexDefinition.getMultiValueDefinitionIndex(),
+                iRecord.getProperty(multiValueField));
           }
         }
 
-        final Object origValue = indexDefinition.createValue(session, origValues);
-        deleteIndexKey(session, index, iRecord, origValue);
+        final var origValue = indexDefinition.createValue(transaction, origValues);
+        deleteIndexKey(transaction, index, iRecord, origValue);
         return true;
       }
     }
@@ -330,108 +332,97 @@ public class ClassIndexManager {
   }
 
   private static void deleteIndexKey(
-      DatabaseSessionInternal session, final Index index, final EntityImpl iRecord,
+      FrontendTransaction transaction, final Index index, final EntityImpl iRecord,
       final Object origValue) {
-    final IndexDefinition indexDefinition = index.getDefinition();
+    final var indexDefinition = index.getDefinition();
     if (origValue instanceof Collection) {
-      for (final Object valueItem : (Collection<?>) origValue) {
+      for (final var valueItem : (Collection<?>) origValue) {
         if (!indexDefinition.isNullValuesIgnored() || valueItem != null) {
-          addRemove(session, index, valueItem, iRecord);
+          addRemove(transaction, index, valueItem, iRecord);
         }
       }
     } else if (!indexDefinition.isNullValuesIgnored() || origValue != null) {
-      addRemove(session, index, origValue, iRecord);
+      addRemove(transaction, index, origValue, iRecord);
     }
   }
 
   @SuppressWarnings({"rawtypes", "unchecked"})
   private static boolean processSingleIndexDelete(
-      DatabaseSessionInternal session,
+      FrontendTransaction transaction,
       final Index index,
       final Set<String> dirtyFields,
       final EntityImpl iRecord) {
-    final IndexDefinition indexDefinition = index.getDefinition();
+    final var indexDefinition = index.getDefinition();
 
-    final List<String> indexFields = indexDefinition.getFields();
+    final var indexFields = indexDefinition.getProperties();
     if (indexFields.isEmpty()) {
       return false;
     }
 
-    final String indexField = indexFields.iterator().next();
+    final var indexField = indexFields.getFirst();
     if (dirtyFields.contains(indexField)) {
       final MultiValueChangeTimeLine<?, ?> multiValueChangeTimeLine =
           iRecord.getCollectionTimeLine(indexField);
 
       final Object origValue;
       if (multiValueChangeTimeLine != null) {
-        final TrackedMultiValue fieldValue = iRecord.field(indexField);
-        final Object restoredMultiValue =
-            fieldValue.returnOriginalState(session,
+        final TrackedMultiValue fieldValue = iRecord.getProperty(indexField);
+        final var restoredMultiValue =
+            fieldValue.returnOriginalState(transaction,
                 multiValueChangeTimeLine.getMultiValueChangeEvents());
-        origValue = indexDefinition.createValue(session, restoredMultiValue);
+        origValue = indexDefinition.createValue(transaction, restoredMultiValue);
       } else {
-        origValue = indexDefinition.createValue(session, iRecord.getOriginalValue(indexField));
+        origValue = indexDefinition.createValue(transaction, iRecord.getOriginalValue(indexField));
       }
-      deleteIndexKey(session, index, iRecord, origValue);
+      deleteIndexKey(transaction, index, iRecord, origValue);
       return true;
     }
     return false;
   }
 
-  private static EntityImpl checkForLoading(DatabaseSessionInternal session,
-      final EntityImpl iRecord) {
-    if (iRecord.isUnloaded()) {
-      try {
-        return session.load(iRecord.getIdentity());
-      } catch (final RecordNotFoundException e) {
-        throw BaseException.wrapException(
-            new IndexException("Error during loading of record with id " + iRecord.getIdentity()),
-            e);
-      }
-    }
-    return iRecord;
-  }
-
   public static void processIndexUpdate(
-      DatabaseSessionInternal session,
+      FrontendTransaction transaction,
       EntityImpl entity,
       Set<String> dirtyFields,
       Index index) {
     if (index.getDefinition() instanceof CompositeIndexDefinition) {
-      processCompositeIndexUpdate(session, index, dirtyFields, entity);
+      processCompositeIndexUpdate(transaction, index, dirtyFields, entity);
     } else {
-      processSingleIndexUpdate(index, dirtyFields, entity, session);
+      processSingleIndexUpdate(index, dirtyFields, entity, transaction);
     }
   }
 
   public static void addIndexesEntries(
-      DatabaseSessionInternal session, EntityImpl entity, final Collection<Index> indexes) {
+      FrontendTransaction transaction, EntityImpl entity, final Collection<Index> indexes) {
     // STORE THE RECORD IF NEW, OTHERWISE ITS RID
     final Identifiable rid = entity.getIdentity();
 
-    for (final Index index : indexes) {
-      addIndexEntry(session, entity, rid, index);
+    for (final var index : indexes) {
+      addIndexEntry(transaction, entity, rid, index);
     }
   }
 
   private static void addIndexEntry(
-      DatabaseSessionInternal session, EntityImpl entity, Identifiable rid, Index index) {
-    final IndexDefinition indexDefinition = index.getDefinition();
-    final Object key = indexDefinition.getDocumentValueToIndex(session, entity);
+      FrontendTransaction transaction, EntityImpl entity, Identifiable rid, Index index) {
+    final var indexDefinition = index.getDefinition();
+    final var key = indexDefinition.getDocumentValueToIndex(transaction, entity);
     if (key instanceof Collection) {
-      for (final Object keyItem : (Collection<?>) key) {
+      for (final var keyItem : (Collection<?>) key) {
         if (!indexDefinition.isNullValuesIgnored() || keyItem != null) {
-          addPut(session, index, keyItem, rid);
+          addPut(transaction, index, keyItem, rid);
         }
       }
     } else if (!indexDefinition.isNullValuesIgnored() || key != null) {
-      addPut(session, index, key, rid);
+      addPut(transaction, index, key, rid);
     }
   }
 
-  public static void processIndexOnDelete(DatabaseSessionInternal database,
+  public static void processIndexOnDelete(FrontendTransaction transaction,
       EntityImpl entity) {
-    final SchemaImmutableClass cls = EntityInternalUtils.getImmutableSchemaClass(database, entity);
+    SchemaImmutableClass cls = null;
+    if (entity != null) {
+      cls = entity.getImmutableSchemaClass(transaction.getDatabaseSession());
+    }
     if (cls == null) {
       return;
     }
@@ -439,20 +430,21 @@ public class ClassIndexManager {
     final Collection<Index> indexes = new ArrayList<>(cls.getRawIndexes());
 
     if (!indexes.isEmpty()) {
-      final Set<String> dirtyFields = new HashSet<>(Arrays.asList(entity.getDirtyFields()));
+      var dirtyProperties = entity.getDirtyPropertiesBetweenCallbacksInternal(false, false);
+      var dirtyFields = new HashSet<>(dirtyProperties);
 
       if (!dirtyFields.isEmpty()) {
         // REMOVE INDEX OF ENTRIES FOR THE OLD VALUES
-        final Iterator<Index> indexIterator = indexes.iterator();
+        final var indexIterator = indexes.iterator();
 
         while (indexIterator.hasNext()) {
-          final Index index = indexIterator.next();
+          final var index = indexIterator.next();
 
           final boolean result;
           if (index.getDefinition() instanceof CompositeIndexDefinition) {
-            result = processCompositeIndexDelete(database, index, dirtyFields, entity);
+            result = processCompositeIndexDelete(transaction, index, dirtyFields, entity);
           } else {
-            result = processSingleIndexDelete(database, index, dirtyFields, entity);
+            result = processSingleIndexDelete(transaction, index, dirtyFields, entity);
           }
 
           if (result) {
@@ -463,19 +455,19 @@ public class ClassIndexManager {
     }
 
     // REMOVE INDEX OF ENTRIES FOR THE NON CHANGED ONLY VALUES
-    for (final Index index : indexes) {
-      final Object key = index.getDefinition().getDocumentValueToIndex(database, entity);
-      deleteIndexKey(database, index, entity, key);
+    for (final var index : indexes) {
+      final var key = index.getDefinition().getDocumentValueToIndex(transaction, entity);
+      deleteIndexKey(transaction, index, entity, key);
     }
   }
 
-  private static void addPut(DatabaseSessionInternal session, Index index, Object key,
+  private static void addPut(FrontendTransaction transaction, Index index, Object key,
       Identifiable value) {
-    index.put(session, key, value);
+    index.put(transaction, key, value);
   }
 
-  private static void addRemove(DatabaseSessionInternal session, Index index, Object key,
+  private static void addRemove(FrontendTransaction transaction, Index index, Object key,
       Identifiable value) {
-    index.remove(session, key, value);
+    index.remove(transaction, key, value);
   }
 }
