@@ -19,29 +19,28 @@
  */
 package com.jetbrains.youtrack.db.internal.core.security;
 
+import com.jetbrains.youtrack.db.api.config.GlobalConfiguration;
+import com.jetbrains.youtrack.db.api.record.Identifiable;
 import com.jetbrains.youtrack.db.internal.common.io.IOUtils;
 import com.jetbrains.youtrack.db.internal.common.log.LogManager;
 import com.jetbrains.youtrack.db.internal.common.parser.SystemVariableResolver;
-import com.jetbrains.youtrack.db.api.config.GlobalConfiguration;
+import com.jetbrains.youtrack.db.internal.core.db.DatabaseSessionEmbedded;
 import com.jetbrains.youtrack.db.internal.core.db.DatabaseSessionInternal;
-import com.jetbrains.youtrack.db.api.schema.PropertyType;
 import com.jetbrains.youtrack.db.internal.core.db.YouTrackDBInternal;
+import com.jetbrains.youtrack.db.internal.core.db.YouTrackDBInternalEmbedded;
 import com.jetbrains.youtrack.db.internal.core.metadata.security.ImmutableUser;
 import com.jetbrains.youtrack.db.internal.core.metadata.security.Role;
 import com.jetbrains.youtrack.db.internal.core.metadata.security.Rule;
 import com.jetbrains.youtrack.db.internal.core.metadata.security.Rule.ResourceGeneric;
-import com.jetbrains.youtrack.db.internal.core.metadata.security.Security;
 import com.jetbrains.youtrack.db.internal.core.metadata.security.SecurityInternal;
-import com.jetbrains.youtrack.db.internal.core.metadata.security.SecurityRole;
 import com.jetbrains.youtrack.db.internal.core.metadata.security.SecurityShared;
-import com.jetbrains.youtrack.db.internal.core.metadata.security.SecuritySystemUserIml;
-import com.jetbrains.youtrack.db.api.security.SecurityUser;
+import com.jetbrains.youtrack.db.internal.core.metadata.security.SecuritySystemUserImpl;
 import com.jetbrains.youtrack.db.internal.core.metadata.security.auth.AuthenticationInfo;
-import com.jetbrains.youtrack.db.internal.core.record.impl.EntityImpl;
 import com.jetbrains.youtrack.db.internal.core.security.authenticator.DatabaseUserAuthenticator;
 import com.jetbrains.youtrack.db.internal.core.security.authenticator.ServerConfigAuthenticator;
 import com.jetbrains.youtrack.db.internal.core.security.authenticator.SystemUserAuthenticator;
 import com.jetbrains.youtrack.db.internal.core.security.authenticator.TemporaryGlobalUser;
+import com.jetbrains.youtrack.db.internal.core.serialization.serializer.record.string.JSONSerializerJackson;
 import java.io.File;
 import java.io.FileInputStream;
 import java.util.ArrayList;
@@ -50,12 +49,16 @@ import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
 import java.util.concurrent.ConcurrentHashMap;
-import java.util.stream.Collectors;
+import javax.annotation.Nullable;
+import org.slf4j.Logger;
+import org.slf4j.LoggerFactory;
 
 /**
- * Provides an implementation of OServerSecurity.
+ * Provides an implementation of ServerSecurity.
  */
 public class DefaultSecuritySystem implements SecuritySystem {
+
+  private static final Logger logger = LoggerFactory.getLogger(DefaultSecuritySystem.class);
 
   private boolean enabled = false; // Defaults to not
   // enabled at
@@ -78,17 +81,17 @@ public class DefaultSecuritySystem implements SecuritySystem {
   private final Object auditingSynch = new Object();
   private AuditingService auditingService;
 
-  private EntityImpl configEntity; // Holds the
+  private Map<String, Object> configEntity; // Holds the
   // current JSON
   // configuration.
   private SecurityConfig serverConfig;
-  private YouTrackDBInternal context;
+  private YouTrackDBInternalEmbedded context;
 
-  private EntityImpl auditingEntity;
-  private EntityImpl serverEntity;
-  private EntityImpl authEntity;
-  private EntityImpl passwdValEntity;
-  private EntityImpl ldapImportEntity;
+  private Map<String, Object> auditingEntity;
+  private Map<String, Object> serverEntity;
+  private Map<String, Object> authEntity;
+  private Map<String, Object> passwdValEntity;
+  private Map<String, Object> ldapImportEntity;
 
   // We use a list because the order indicates priority of method.
   private volatile List<SecurityAuthenticator> authenticatorsList;
@@ -105,7 +108,7 @@ public class DefaultSecuritySystem implements SecuritySystem {
   public DefaultSecuritySystem() {
   }
 
-  public void activate(final YouTrackDBInternal context,
+  public void activate(final YouTrackDBInternalEmbedded context,
       final SecurityConfig serverCfg) {
     this.context = context;
     this.serverConfig = serverCfg;
@@ -114,36 +117,36 @@ public class DefaultSecuritySystem implements SecuritySystem {
     }
     onAfterDynamicPlugins(null);
     tokenSign = new TokenSignImpl(context.getConfiguration().getConfiguration());
-    for (GlobalUser user : context.getConfiguration().getUsers()) {
+    for (var user : context.getConfiguration().getUsers()) {
       configUsers.put(user.getName(), user);
     }
   }
 
   public static void createSystemRoles(DatabaseSessionInternal session) {
     session.executeInTx(
-        () -> {
-          Security security = session.getMetadata().getSecurity();
+        transaction -> {
+          var security = session.getMetadata().getSecurity();
           if (security.getRole("root") == null) {
-            Role root = security.createRole("root", Role.ALLOW_MODES.DENY_ALL_BUT);
-            for (Rule.ResourceGeneric resource : Rule.ResourceGeneric.values()) {
+            var root = security.createRole("root");
+            for (var resource : Rule.ResourceGeneric.values()) {
               root.addRule(session, resource, null, Role.PERMISSION_ALL);
             }
             // Do not allow root to have access to audit log class by default.
             root.addRule(session, ResourceGeneric.CLASS, "OAuditingLog", Role.PERMISSION_NONE);
-            root.addRule(session, ResourceGeneric.CLUSTER, "oauditinglog", Role.PERMISSION_NONE);
+            root.addRule(session, ResourceGeneric.COLLECTION, "oauditinglog", Role.PERMISSION_NONE);
             root.save(session);
           }
           if (security.getRole("guest") == null) {
-            Role guest = security.createRole("guest", Role.ALLOW_MODES.DENY_ALL_BUT);
+            var guest = security.createRole("guest");
             guest.addRule(session, ResourceGeneric.SERVER, "listDatabases", Role.PERMISSION_ALL);
             guest.save(session);
           }
           // for monitoring/logging purposes, intended to connect from external monitoring systems
           if (security.getRole("monitor") == null) {
-            Role guest = security.createRole("monitor", Role.ALLOW_MODES.DENY_ALL_BUT);
+            var guest = security.createRole("monitor");
             guest.addRule(session, ResourceGeneric.CLASS, null, Role.PERMISSION_READ);
-            guest.addRule(session, ResourceGeneric.CLUSTER, null, Role.PERMISSION_READ);
-            guest.addRule(session, ResourceGeneric.SYSTEM_CLUSTERS, null, Role.PERMISSION_READ);
+            guest.addRule(session, ResourceGeneric.COLLECTION, null, Role.PERMISSION_READ);
+            guest.addRule(session, ResourceGeneric.SYSTEM_COLLECTIONS, null, Role.PERMISSION_READ);
             guest.addRule(session, ResourceGeneric.SCHEMA, null, Role.PERMISSION_READ);
             guest.addRule(session, ResourceGeneric.FUNCTION, null, Role.PERMISSION_ALL);
             guest.addRule(session, ResourceGeneric.COMMAND, null, Role.PERMISSION_ALL);
@@ -154,20 +157,21 @@ public class DefaultSecuritySystem implements SecuritySystem {
           }
           // a separate role for accessing the auditing logs
           if (security.getRole("auditor") == null) {
-            Role auditor = security.createRole("auditor", SecurityRole.ALLOW_MODES.DENY_ALL_BUT);
+            var auditor = security.createRole("auditor");
             auditor.addRule(session, ResourceGeneric.DATABASE, null, Role.PERMISSION_READ);
             auditor.addRule(session, ResourceGeneric.SCHEMA, null, Role.PERMISSION_READ);
             auditor.addRule(session, ResourceGeneric.CLASS, null, Role.PERMISSION_READ);
-            auditor.addRule(session, ResourceGeneric.CLUSTER, null, Role.PERMISSION_READ);
-            auditor.addRule(session, ResourceGeneric.CLUSTER, "orole", Role.PERMISSION_NONE);
-            auditor.addRule(session, ResourceGeneric.CLUSTER, "ouser", Role.PERMISSION_NONE);
+            auditor.addRule(session, ResourceGeneric.COLLECTION, null, Role.PERMISSION_READ);
+            auditor.addRule(session, ResourceGeneric.COLLECTION, "orole", Role.PERMISSION_NONE);
+            auditor.addRule(session, ResourceGeneric.COLLECTION, "ouser", Role.PERMISSION_NONE);
             auditor.addRule(session, ResourceGeneric.CLASS, "OUser", Role.PERMISSION_NONE);
             auditor.addRule(session, ResourceGeneric.CLASS, "orole", Role.PERMISSION_NONE);
-            auditor.addRule(session, ResourceGeneric.SYSTEM_CLUSTERS, null, Role.PERMISSION_NONE);
+            auditor.addRule(session, ResourceGeneric.SYSTEM_COLLECTIONS, null,
+                Role.PERMISSION_NONE);
             auditor.addRule(session, ResourceGeneric.CLASS, "OAuditingLog",
                 Role.PERMISSION_CREATE + Role.PERMISSION_READ + Role.PERMISSION_UPDATE);
             auditor.addRule(session,
-                ResourceGeneric.CLUSTER,
+                ResourceGeneric.COLLECTION,
                 "oauditinglog",
                 Role.PERMISSION_CREATE + Role.PERMISSION_READ + Role.PERMISSION_UPDATE);
             auditor.save(session);
@@ -175,14 +179,14 @@ public class DefaultSecuritySystem implements SecuritySystem {
         });
   }
 
-  private void initDefultAuthenticators(DatabaseSessionInternal session) {
-    ServerConfigAuthenticator serverAuth = new ServerConfigAuthenticator();
+  private void initDefultAuthenticators(DatabaseSessionEmbedded session) {
+    var serverAuth = new ServerConfigAuthenticator();
     serverAuth.config(session, null, this);
 
-    DatabaseUserAuthenticator databaseAuth = new DatabaseUserAuthenticator();
+    var databaseAuth = new DatabaseUserAuthenticator();
     databaseAuth.config(session, null, this);
 
-    SystemUserAuthenticator systemAuth = new SystemUserAuthenticator();
+    var systemAuth = new SystemUserAuthenticator();
     systemAuth.config(session, null, this);
 
     List<SecurityAuthenticator> authenticators = new ArrayList<>();
@@ -196,12 +200,12 @@ public class DefaultSecuritySystem implements SecuritySystem {
     close();
   }
 
-  private Class<?> getClass(final EntityImpl jsonConfig) {
+  private Class<?> getClass(final Map<String, Object> jsonConfig) {
     Class<?> cls = null;
 
     try {
-      if (jsonConfig.containsField("class")) {
-        final String clsName = jsonConfig.field("class");
+      if (jsonConfig.containsKey("class")) {
+        final var clsName = jsonConfig.get("class").toString();
 
         if (securityClassMap.containsKey(clsName)) {
           cls = securityClassMap.get(clsName);
@@ -216,9 +220,10 @@ public class DefaultSecuritySystem implements SecuritySystem {
     return cls;
   }
 
-  // SecuritySystem (via OServerSecurity)
+  // SecuritySystem (via ServerSecurity)
   // Some external security implementations may permit falling back to a
   // default authentication mode if external authentication fails.
+  @Override
   public boolean isDefaultAllowed() {
     if (enabled) {
       return allowDefault;
@@ -227,12 +232,13 @@ public class DefaultSecuritySystem implements SecuritySystem {
     }
   }
 
+  @Nullable
   @Override
   public SecurityUser authenticate(
       DatabaseSessionInternal session, AuthenticationInfo authenticationInfo) {
     try {
-      for (SecurityAuthenticator sa : enabledAuthenticators) {
-        SecurityUser principal = sa.authenticate(session, authenticationInfo);
+      for (var sa : enabledAuthenticators) {
+        var principal = sa.authenticate(session, authenticationInfo);
 
         if (principal != null) {
           return principal;
@@ -246,6 +252,8 @@ public class DefaultSecuritySystem implements SecuritySystem {
   }
 
   // SecuritySystem (via OServerSecurity)
+  @Override
+  @Nullable
   public SecurityUser authenticate(
       DatabaseSessionInternal session, final String username, final String password) {
     try {
@@ -262,8 +270,8 @@ public class DefaultSecuritySystem implements SecuritySystem {
         }
       }
 
-      for (SecurityAuthenticator sa : enabledAuthenticators) {
-        SecurityUser principal = sa.authenticate(session, username, password);
+      for (var sa : enabledAuthenticators) {
+        var principal = sa.authenticate(session, username, password);
 
         if (principal != null) {
           return principal;
@@ -277,10 +285,12 @@ public class DefaultSecuritySystem implements SecuritySystem {
     return null; // Indicates authentication failed.
   }
 
+  @Override
+  @Nullable
   public SecurityUser authenticateServerUser(DatabaseSessionInternal session,
       final String username,
       final String password) {
-    SecurityUser user = getServerUser(session, username);
+    var user = getServerUser(session, username);
 
     if (user != null && user.getPassword(session) != null) {
       if (SecurityManager.checkPassword(password, user.getPassword(session).trim())) {
@@ -290,12 +300,14 @@ public class DefaultSecuritySystem implements SecuritySystem {
     return null;
   }
 
-  public YouTrackDBInternal getContext() {
+  @Override
+  public YouTrackDBInternalEmbedded getContext() {
     return context;
   }
 
   // SecuritySystem (via OServerSecurity)
   // Used for generating the appropriate HTTP authentication mechanism.
+  @Override
   public String getAuthenticationHeader(final String databaseName) {
     String header = null;
 
@@ -307,22 +319,22 @@ public class DefaultSecuritySystem implements SecuritySystem {
     }
 
     if (enabled) {
-      StringBuilder sb = new StringBuilder();
+      var sb = new StringBuilder();
 
       // Walk through the list of OSecurityAuthenticators.
-      for (SecurityAuthenticator sa : enabledAuthenticators) {
-        String sah = sa.getAuthenticationHeader(databaseName);
+      for (var sa : enabledAuthenticators) {
+        var sah = sa.getAuthenticationHeader(databaseName);
 
-        if (sah != null && sah.trim().length() > 0) {
+        if (sah != null && !sah.trim().isEmpty()) {
           // If we're not the first authenticator, then append "\n".
-          if (sb.length() > 0) {
+          if (!sb.isEmpty()) {
             sb.append("\r\n");
           }
           sb.append(sah);
         }
       }
 
-      if (sb.length() > 0) {
+      if (!sb.isEmpty()) {
         header = sb.toString();
       }
     }
@@ -344,10 +356,10 @@ public class DefaultSecuritySystem implements SecuritySystem {
     if (enabled) {
 
       // Walk through the list of OSecurityAuthenticators.
-      for (SecurityAuthenticator sa : enabledAuthenticators) {
+      for (var sa : enabledAuthenticators) {
         if (sa.isEnabled()) {
-          Map<String, String> currentHeaders = sa.getAuthenticationHeaders(databaseName);
-          currentHeaders.entrySet().forEach(entry -> headers.put(entry.getKey(), entry.getValue()));
+          var currentHeaders = sa.getAuthenticationHeaders(databaseName);
+          headers.putAll(currentHeaders);
         }
       }
     }
@@ -356,31 +368,32 @@ public class DefaultSecuritySystem implements SecuritySystem {
   }
 
   // SecuritySystem (via OServerSecurity)
-  public EntityImpl getConfig() {
-    EntityImpl jsonConfig = new EntityImpl();
+  @Override
+  public Map<String, Object> getConfig() {
+    var jsonConfig = new HashMap<String, Object>();
 
     try {
-      jsonConfig.field("enabled", enabled);
-      jsonConfig.field("debug", debug);
+      jsonConfig.put("enabled", enabled);
+      jsonConfig.put("debug", debug);
 
       if (serverEntity != null) {
-        jsonConfig.field("server", serverEntity, PropertyType.EMBEDDED);
+        jsonConfig.put("server", serverEntity);
       }
 
       if (authEntity != null) {
-        jsonConfig.field("authentication", authEntity, PropertyType.EMBEDDED);
+        jsonConfig.put("authentication", authEntity);
       }
 
       if (passwdValEntity != null) {
-        jsonConfig.field("passwordValidator", passwdValEntity, PropertyType.EMBEDDED);
+        jsonConfig.put("passwordValidator", passwdValEntity);
       }
 
       if (ldapImportEntity != null) {
-        jsonConfig.field("ldapImporter", ldapImportEntity, PropertyType.EMBEDDED);
+        jsonConfig.put("ldapImporter", ldapImportEntity);
       }
 
       if (auditingEntity != null) {
-        jsonConfig.field("auditing", auditingEntity, PropertyType.EMBEDDED);
+        jsonConfig.put("auditing", auditingEntity);
       }
     } catch (Exception ex) {
       LogManager.instance().error(this, "DefaultServerSecurity.getConfig() Exception: %s", ex);
@@ -392,7 +405,9 @@ public class DefaultSecuritySystem implements SecuritySystem {
   // SecuritySystem (via OServerSecurity)
   // public EntityImpl getComponentConfig(final String name) { return getSection(name); }
 
-  public EntityImpl getComponentConfig(final String name) {
+  @Override
+  @Nullable
+  public Map<String, Object> getComponentConfig(final String name) {
     if (name != null) {
       if (name.equalsIgnoreCase("auditing")) {
         return auditingEntity;
@@ -416,21 +431,26 @@ public class DefaultSecuritySystem implements SecuritySystem {
    * Returns the "System User" associated with 'username' from the system database. If not found,
    * returns null. dbName is used to filter the assigned roles. It may be null.
    */
+  @Override
+  @Nullable
   public SecurityUser getSystemUser(final String username, final String dbName) {
     // ** There are cases when we need to retrieve an OUser that is a system user.
     //  if (isEnabled() && !SystemDatabase.SYSTEM_DB_NAME.equals(dbName)) {
     var systemDb = context.getSystemDatabase();
     if (context.getSystemDatabase().exists()) {
       return systemDb
-          .execute(
+          .query(
               (resultset, session) -> {
                 var sessionInternal = (DatabaseSessionInternal) session;
                 if (resultset != null && resultset.hasNext()) {
+                  Identifiable identifiable = resultset.next().asEntity();
+                  var transaction = session.getActiveTransaction();
                   return new ImmutableUser(sessionInternal,
                       0,
-                      new SecuritySystemUserIml(sessionInternal,
-                          resultset.next().getEntity().orElseThrow().getRecord(), dbName));
+                      new SecuritySystemUserImpl(sessionInternal,
+                          transaction.load(identifiable), dbName));
                 }
+                //noinspection ReturnOfNull
                 return null;
               },
               "select from OUser where name = ? limit 1 fetchplan roles:1",
@@ -442,6 +462,7 @@ public class DefaultSecuritySystem implements SecuritySystem {
   // SecuritySystem (via OServerSecurity)
   // This will first look for a user in the security.json "users" array and then check if a resource
   // matches.
+  @Override
   public boolean isAuthorized(DatabaseSessionInternal session, final String username,
       final String resource) {
     if (username == null || resource == null) {
@@ -449,7 +470,7 @@ public class DefaultSecuritySystem implements SecuritySystem {
     }
 
     // Walk through the list of OSecurityAuthenticators.
-    for (SecurityAuthenticator sa : enabledAuthenticators) {
+    for (var sa : enabledAuthenticators) {
       if (sa.isAuthorized(session, username, resource)) {
         return true;
       }
@@ -457,9 +478,10 @@ public class DefaultSecuritySystem implements SecuritySystem {
     return false;
   }
 
+  @Override
   public boolean isServerUserAuthorized(DatabaseSessionInternal session, final String username,
       final String resource) {
-    final SecurityUser user = getServerUser(session, username);
+    final var user = getServerUser(session, username);
 
     if (user != null) {
       // TODO: to verify if this logic match previous logic
@@ -477,12 +499,14 @@ public class DefaultSecuritySystem implements SecuritySystem {
   }
 
   // SecuritySystem (via OServerSecurity)
+  @Override
   public boolean isEnabled() {
     return enabled;
   }
 
   // SecuritySystem (via OServerSecurity)
   // Indicates if passwords should be stored for users.
+  @Override
   public boolean arePasswordsStored() {
     if (enabled) {
       return storePasswords;
@@ -493,9 +517,10 @@ public class DefaultSecuritySystem implements SecuritySystem {
 
   // SecuritySystem (via OServerSecurity)
   // Indicates if the primary security mechanism supports single sign-on.
+  @Override
   public boolean isSingleSignOnSupported() {
     if (enabled) {
-      SecurityAuthenticator priAuth = getPrimaryAuthenticator();
+      var priAuth = getPrimaryAuthenticator();
 
       if (priAuth != null) {
         return priAuth.isSingleSignOnSupported();
@@ -506,6 +531,7 @@ public class DefaultSecuritySystem implements SecuritySystem {
   }
 
   // SecuritySystem (via OServerSecurity)
+  @Override
   public void validatePassword(final String username, final String password)
       throws InvalidPasswordException {
     if (enabled) {
@@ -522,13 +548,16 @@ public class DefaultSecuritySystem implements SecuritySystem {
    */
 
   // OServerSecurity
+  @Override
   public AuditingService getAuditing() {
     return auditingService;
   }
 
   // OServerSecurity
+  @Override
+  @Nullable
   public SecurityAuthenticator getAuthenticator(final String authMethod) {
-    for (SecurityAuthenticator am : authenticatorsList) {
+    for (var am : authenticatorsList) {
       // If authMethod is null or an empty string, then return the first SecurityAuthenticator.
       if (authMethod == null || authMethod.isEmpty()) {
         return am;
@@ -544,11 +573,13 @@ public class DefaultSecuritySystem implements SecuritySystem {
 
   // OServerSecurity
   // Returns the first SecurityAuthenticator in the list.
+  @Override
+  @Nullable
   public SecurityAuthenticator getPrimaryAuthenticator() {
     if (enabled) {
-      List<SecurityAuthenticator> auth = authenticatorsList;
-      if (auth.size() > 0) {
-        return auth.get(0);
+      var auth = authenticatorsList;
+      if (!auth.isEmpty()) {
+        return auth.getFirst();
       }
     }
 
@@ -556,11 +587,12 @@ public class DefaultSecuritySystem implements SecuritySystem {
   }
 
   // OServerSecurity
+  @Override
   public SecurityUser getUser(final String username, DatabaseSessionInternal session) {
     SecurityUser userCfg = null;
 
     // Walk through the list of OSecurityAuthenticators.
-    for (SecurityAuthenticator sa : enabledAuthenticators) {
+    for (var sa : enabledAuthenticators) {
       userCfg = sa.getUser(username, session);
       if (userCfg != null) {
         break;
@@ -570,14 +602,15 @@ public class DefaultSecuritySystem implements SecuritySystem {
     return userCfg;
   }
 
+  @Override
   public SecurityUser getServerUser(DatabaseSessionInternal session, final String username) {
     SecurityUser systemUser = null;
     // This will throw an IllegalArgumentException if iUserName is null or empty.
     // However, a null or empty iUserName is possible with some security implementations.
     if (username != null && !username.isEmpty()) {
-      GlobalUser userCfg = configUsers.get(username);
+      var userCfg = configUsers.get(username);
       if (userCfg == null) {
-        for (TemporaryGlobalUser user : ephemeralUsers.values()) {
+        for (var user : ephemeralUsers.values()) {
           if (username.equalsIgnoreCase(user.getName())) {
             // FOUND
             userCfg = user;
@@ -585,7 +618,7 @@ public class DefaultSecuritySystem implements SecuritySystem {
         }
       }
       if (userCfg != null) {
-        SecurityRole role = SecurityShared.createRole(userCfg);
+        var role = SecurityShared.createRole(userCfg);
         systemUser =
             new ImmutableUser(session,
                 username, userCfg.getPassword(), SecurityUser.SERVER_USER_TYPE, role);
@@ -601,6 +634,7 @@ public class DefaultSecuritySystem implements SecuritySystem {
   }
 
   // SecuritySystem
+  @Override
   public void log(
       DatabaseSessionInternal session, final AuditingOperation operation,
       final String dbName,
@@ -614,8 +648,9 @@ public class DefaultSecuritySystem implements SecuritySystem {
   }
 
   // SecuritySystem
+  @Override
   public void registerSecurityClass(final Class<?> cls) {
-    String fullTypeName = getFullTypeName(cls);
+    var fullTypeName = getFullTypeName(cls);
 
     if (fullTypeName != null) {
       securityClassMap.put(fullTypeName, cls);
@@ -623,8 +658,9 @@ public class DefaultSecuritySystem implements SecuritySystem {
   }
 
   // SecuritySystem
+  @Override
   public void unregisterSecurityClass(final Class<?> cls) {
-    String fullTypeName = getFullTypeName(cls);
+    var fullTypeName = getFullTypeName(cls);
 
     if (fullTypeName != null) {
       securityClassMap.remove(fullTypeName);
@@ -637,7 +673,7 @@ public class DefaultSecuritySystem implements SecuritySystem {
 
     typeName = type.getSimpleName();
 
-    Package pack = type.getPackage();
+    var pack = type.getPackage();
 
     if (pack != null) {
       typeName = pack.getName() + "." + typeName;
@@ -651,13 +687,14 @@ public class DefaultSecuritySystem implements SecuritySystem {
   }
 
   // SecuritySystem
-  public void reload(DatabaseSessionInternal session, final EntityImpl configEntity) {
+  @Override
+  public void reload(DatabaseSessionEmbedded session, final Map<String, Object> configEntity) {
     reload(session, null, configEntity);
   }
 
   @Override
-  public void reload(DatabaseSessionInternal session, SecurityUser user,
-      EntityImpl configEntity) {
+  public void reload(DatabaseSessionEmbedded session, SecurityUser user,
+      Map<String, Object> configEntity) {
     if (configEntity != null) {
       close();
 
@@ -680,8 +717,9 @@ public class DefaultSecuritySystem implements SecuritySystem {
     }
   }
 
-  public void reloadComponent(DatabaseSessionInternal session, SecurityUser user,
-      final String name, final EntityImpl jsonConfig) {
+  @Override
+  public void reloadComponent(DatabaseSessionEmbedded session, SecurityUser user,
+      final String name, final Map<String, Object> jsonConfig) {
     if (name == null || name.isEmpty()) {
       throw new SecuritySystemException(
           "DefaultServerSecurity.reloadComponent() name is null or empty");
@@ -717,29 +755,32 @@ public class DefaultSecuritySystem implements SecuritySystem {
         user, String.format("The %s security component has been reloaded", name));
   }
 
-  private void loadAuthenticators(DatabaseSessionInternal session, final EntityImpl authEntity) {
-    if (authEntity.containsField("authenticators")) {
+  private void loadAuthenticators(DatabaseSessionEmbedded session,
+      final Map<String, Object> authEntity) {
+    if (authEntity.containsKey("authenticators")) {
       List<SecurityAuthenticator> autheticators = new ArrayList<>();
-      List<EntityImpl> authMethodsList = authEntity.field("authenticators");
+      @SuppressWarnings("unchecked")
+      var authMethodsList = (List<Map<String, Object>>) authEntity.get(
+          "authenticators");
 
-      for (EntityImpl authMethodEntity : authMethodsList) {
+      for (var authMethodEntity : authMethodsList) {
         try {
-          if (authMethodEntity.containsField("name")) {
-            final String name = authMethodEntity.field("name");
+          if (authMethodEntity.containsKey("name")) {
+            final var name = authMethodEntity.get("name").toString();
 
             // defaults to enabled if "enabled" is missing
-            boolean enabled = true;
+            var enabled = true;
 
-            if (authMethodEntity.containsField("enabled")) {
-              enabled = authMethodEntity.field("enabled");
+            if (authMethodEntity.containsKey("enabled")) {
+              enabled = (Boolean) authMethodEntity.get("enabled");
             }
 
             if (enabled) {
-              Class<?> authClass = getClass(authMethodEntity);
+              var authClass = getClass(authMethodEntity);
 
               if (authClass != null) {
                 if (SecurityAuthenticator.class.isAssignableFrom(authClass)) {
-                  SecurityAuthenticator authPlugin =
+                  var authPlugin =
                       (SecurityAuthenticator) authClass.newInstance();
 
                   authPlugin.config(session, authMethodEntity, this);
@@ -787,12 +828,13 @@ public class DefaultSecuritySystem implements SecuritySystem {
   }
 
   // OServerSecurity
-  public void onAfterDynamicPlugins(DatabaseSessionInternal session) {
+  @Override
+  public void onAfterDynamicPlugins(DatabaseSessionEmbedded session) {
     onAfterDynamicPlugins(session, null);
   }
 
   @Override
-  public void onAfterDynamicPlugins(DatabaseSessionInternal session, SecurityUser user) {
+  public void onAfterDynamicPlugins(DatabaseSessionEmbedded session, SecurityUser user) {
     if (configEntity != null) {
       loadComponents(session);
 
@@ -801,11 +843,12 @@ public class DefaultSecuritySystem implements SecuritySystem {
       }
     } else {
       initDefultAuthenticators(session);
-      LogManager.instance().debug(this, "onAfterDynamicPlugins() Configuration entity is empty");
+      LogManager.instance().debug(this, "onAfterDynamicPlugins() Configuration entity is empty",
+          logger);
     }
   }
 
-  protected void loadComponents(DatabaseSessionInternal session) {
+  protected void loadComponents(DatabaseSessionEmbedded session) {
     // Loads the top-level configuration properties ("enabled" and "debug").
     loadSecurity();
 
@@ -833,13 +876,14 @@ public class DefaultSecuritySystem implements SecuritySystem {
   }
 
   // Returns a section of the JSON document configuration as an EntityImpl if section is present.
-  private EntityImpl getSection(final String section) {
-    EntityImpl sectionEntity = null;
+  private Map<String, Object> getSection(final String section) {
+    Map<String, Object> sectionEntity = null;
 
     try {
       if (configEntity != null) {
-        if (configEntity.containsField(section)) {
-          sectionEntity = configEntity.field(section);
+        if (configEntity.containsKey(section)) {
+          //noinspection unchecked
+          sectionEntity = (Map<String, Object>) configEntity.get(section);
         }
       } else {
         LogManager.instance()
@@ -857,56 +901,49 @@ public class DefaultSecuritySystem implements SecuritySystem {
   }
 
   // Change the component section and save it to disk
-  private void setSection(final String section, EntityImpl sectionEntity) {
+  private void setSection(final String section, Map<String, Object> sectionEntity) {
 
-    EntityImpl oldSection = getSection(section);
+    var oldSection = getSection(section);
     try {
       if (configEntity != null) {
 
-        configEntity.field(section, sectionEntity);
-        String configFile =
+        configEntity.put(section, sectionEntity);
+        var configFile =
             SystemVariableResolver.resolveSystemVariables(
                 "${YOUTRACKDB_HOME}/config/security.json");
 
-        String ssf = GlobalConfiguration.SERVER_SECURITY_FILE.getValueAsString();
+        var ssf = GlobalConfiguration.SERVER_SECURITY_FILE.getValueAsString();
         if (ssf != null) {
           configFile = ssf;
         }
 
-        File f = new File(configFile);
-        IOUtils.writeFile(f, configEntity.toJSON("prettyPrint"));
+        var f = new File(configFile);
+        IOUtils.writeFile(f, JSONSerializerJackson.INSTANCE.mapToJson(configEntity));
       }
     } catch (Exception ex) {
-      configEntity.field(section, oldSection);
+      configEntity.put(section, oldSection);
       LogManager.instance().error(this, "DefaultServerSecurity.setSection(%s)", ex, section);
     }
   }
 
   // "${YOUTRACKDB_HOME}/config/security.json"
-  private EntityImpl loadConfig(final String cfgPath) {
-    EntityImpl securityEntity = null;
+  private Map<String, Object> loadConfig(final String cfgPath) {
+    Map<String, Object> securityEntity = null;
 
     try {
       if (cfgPath != null) {
         // Default
-        String jsonFile = SystemVariableResolver.resolveSystemVariables(cfgPath);
+        var jsonFile = SystemVariableResolver.resolveSystemVariables(cfgPath);
 
-        File file = new File(jsonFile);
+        var file = new File(jsonFile);
 
         if (file.exists() && file.canRead()) {
-          FileInputStream fis = null;
 
-          try {
-            fis = new FileInputStream(file);
-
-            final byte[] buffer = new byte[(int) file.length()];
+          try (FileInputStream fis = new FileInputStream(file)) {
+            final var buffer = new byte[(int) file.length()];
             fis.read(buffer);
 
-            securityEntity = new EntityImpl().fromJSON(new String(buffer), "noMap");
-          } finally {
-            if (fis != null) {
-              fis.close();
-            }
+            securityEntity = JSONSerializerJackson.INSTANCE.mapFromJson(new String(buffer));
           }
         } else {
           if (file.exists()) {
@@ -927,12 +964,12 @@ public class DefaultSecuritySystem implements SecuritySystem {
     return securityEntity;
   }
 
-  private boolean isEnabled(final EntityImpl sectionEntity) {
-    boolean enabled = true;
+  private boolean isEnabled(final Map<String, Object> sectionEntity) {
+    var enabled = true;
 
     try {
-      if (sectionEntity.containsField("enabled")) {
-        enabled = sectionEntity.field("enabled");
+      if (sectionEntity.containsKey("enabled")) {
+        enabled = (Boolean) sectionEntity.get("enabled");
       }
     } catch (Exception ex) {
       LogManager.instance().error(this, "DefaultServerSecurity.isEnabled()", ex);
@@ -946,16 +983,16 @@ public class DefaultSecuritySystem implements SecuritySystem {
       enabled = false;
 
       if (configEntity != null) {
-        if (configEntity.containsField("enabled")) {
-          enabled = configEntity.field("enabled");
+        if (configEntity.containsKey("enabled")) {
+          enabled = (Boolean) configEntity.get("enabled");
         }
 
-        if (configEntity.containsField("debug")) {
-          debug = configEntity.field("debug");
+        if (configEntity.containsKey("debug")) {
+          debug = (Boolean) configEntity.get("debug");
         }
       } else {
         LogManager.instance()
-            .debug(this, "DefaultServerSecurity.loadSecurity() jsonConfig is null");
+            .debug(this, "DefaultServerSecurity.loadSecurity() jsonConfig is null", logger);
       }
     } catch (Exception ex) {
       LogManager.instance().error(this, "DefaultServerSecurity.loadSecurity()", ex);
@@ -967,13 +1004,13 @@ public class DefaultSecuritySystem implements SecuritySystem {
       storePasswords = true;
 
       if (serverEntity != null) {
-        if (serverEntity.containsField("createDefaultUsers")) {
+        if (serverEntity.containsKey("createDefaultUsers")) {
           GlobalConfiguration.CREATE_DEFAULT_USERS.setValue(
-              serverEntity.field("createDefaultUsers"));
+              serverEntity.get("createDefaultUsers"));
         }
 
-        if (serverEntity.containsField("storePasswords")) {
-          storePasswords = serverEntity.field("storePasswords");
+        if (serverEntity.containsKey("storePasswords")) {
+          storePasswords = (Boolean) serverEntity.get("storePasswords");
         }
       }
     } catch (Exception ex) {
@@ -981,17 +1018,17 @@ public class DefaultSecuritySystem implements SecuritySystem {
     }
   }
 
-  private void reloadAuthMethods(DatabaseSessionInternal session) {
+  private void reloadAuthMethods(DatabaseSessionEmbedded session) {
     if (authEntity != null) {
-      if (authEntity.containsField("allowDefault")) {
-        allowDefault = authEntity.field("allowDefault");
+      if (authEntity.containsKey("allowDefault")) {
+        allowDefault = (Boolean) authEntity.get("allowDefault");
       }
 
       loadAuthenticators(session, authEntity);
     }
   }
 
-  private void reloadPasswordValidator(DatabaseSessionInternal session) {
+  private void reloadPasswordValidator(DatabaseSessionEmbedded session) {
     try {
       synchronized (passwordValidatorSynch) {
         if (passwdValEntity != null && isEnabled(passwdValEntity)) {
@@ -1001,7 +1038,7 @@ public class DefaultSecuritySystem implements SecuritySystem {
             passwordValidator = null;
           }
 
-          Class<?> cls = getClass(passwdValEntity);
+          var cls = getClass(passwdValEntity);
 
           if (cls != null) {
             if (PasswordValidator.class.isAssignableFrom(cls)) {
@@ -1031,7 +1068,7 @@ public class DefaultSecuritySystem implements SecuritySystem {
     }
   }
 
-  private void reloadImportLDAP(DatabaseSessionInternal session) {
+  private void reloadImportLDAP(DatabaseSessionEmbedded session) {
     try {
       synchronized (importLDAPSynch) {
         if (importLDAP != null) {
@@ -1040,7 +1077,7 @@ public class DefaultSecuritySystem implements SecuritySystem {
         }
 
         if (ldapImportEntity != null && isEnabled(ldapImportEntity)) {
-          Class<?> cls = getClass(ldapImportEntity);
+          var cls = getClass(ldapImportEntity);
 
           if (cls != null) {
             if (SecurityComponent.class.isAssignableFrom(cls)) {
@@ -1070,7 +1107,7 @@ public class DefaultSecuritySystem implements SecuritySystem {
     }
   }
 
-  private void reloadAuditingService(DatabaseSessionInternal session) {
+  private void reloadAuditingService(DatabaseSessionEmbedded session) {
     try {
       synchronized (auditingSynch) {
         if (auditingService != null) {
@@ -1079,7 +1116,7 @@ public class DefaultSecuritySystem implements SecuritySystem {
         }
 
         if (auditingEntity != null && isEnabled(auditingEntity)) {
-          Class<?> cls = getClass(auditingEntity);
+          var cls = getClass(auditingEntity);
 
           if (cls != null) {
             if (AuditingService.class.isAssignableFrom(cls)) {
@@ -1139,12 +1176,13 @@ public class DefaultSecuritySystem implements SecuritySystem {
     }
   }
 
+  @Nullable
   @Override
   public SecurityUser authenticateAndAuthorize(
       DatabaseSessionInternal session, String iUserName, String iPassword,
       String iResourceToCheck) {
     // Returns the authenticated username, if successful, otherwise null.
-    SecurityUser user = authenticate(null, iUserName, iPassword);
+    var user = authenticate(null, iUserName, iPassword);
 
     // Authenticated, now see if the user is authorized.
     if (user != null) {
@@ -1155,12 +1193,14 @@ public class DefaultSecuritySystem implements SecuritySystem {
     return null;
   }
 
+  @Override
   public boolean existsUser(String user) {
     return configUsers.containsKey(user);
   }
 
+  @Override
   public void addTemporaryUser(String iName, String iPassword, String iPermissions) {
-    TemporaryGlobalUser userCfg = new TemporaryGlobalUser(iName, iPassword, iPermissions);
+    var userCfg = new TemporaryGlobalUser(iName, iPassword, iPermissions);
     ephemeralUsers.put(iName, userCfg);
   }
 
@@ -1171,14 +1211,14 @@ public class DefaultSecuritySystem implements SecuritySystem {
 
   public synchronized void setAuthenticatorList(List<SecurityAuthenticator> authenticators) {
     if (authenticatorsList != null) {
-      for (SecurityAuthenticator sa : authenticatorsList) {
+      for (var sa : authenticatorsList) {
         sa.dispose();
       }
     }
     this.authenticatorsList = Collections.unmodifiableList(authenticators);
     this.enabledAuthenticators =
-        Collections.unmodifiableList(
-            authenticators.stream().filter((x) -> x.isEnabled()).collect(Collectors.toList()));
+        authenticators.stream().filter(SecurityComponent::isEnabled)
+            .toList();
   }
 
   public synchronized List<SecurityAuthenticator> getEnabledAuthenticators() {
@@ -1189,6 +1229,7 @@ public class DefaultSecuritySystem implements SecuritySystem {
     return authenticatorsList;
   }
 
+  @Override
   public TokenSign getTokenSign() {
     return tokenSign;
   }
