@@ -1,14 +1,11 @@
 package com.jetbrains.youtrack.db.internal.core.sql.executor.metadata;
 
 import com.jetbrains.youtrack.db.api.schema.PropertyType;
-import com.jetbrains.youtrack.db.api.schema.SchemaClass;
 import com.jetbrains.youtrack.db.internal.core.command.CommandContext;
-import com.jetbrains.youtrack.db.internal.core.index.Index;
-import com.jetbrains.youtrack.db.internal.core.index.IndexDefinition;
+import com.jetbrains.youtrack.db.internal.core.metadata.schema.PropertyTypeInternal;
+import com.jetbrains.youtrack.db.internal.core.metadata.schema.SchemaClassInternal;
 import com.jetbrains.youtrack.db.internal.core.metadata.schema.SchemaPropertyInternal;
-import java.util.Collection;
-import java.util.List;
-import java.util.Optional;
+import javax.annotation.Nullable;
 
 public class ClassIndexFinder implements IndexFinder {
 
@@ -21,38 +18,39 @@ public class ClassIndexFinder implements IndexFinder {
 
   private static class PrePath {
 
-    SchemaClass cl;
-    Optional<IndexCandidate> chain;
+    SchemaClassInternal cl;
+    @Nullable
+    IndexCandidate chain;
     boolean valid;
     String last;
   }
 
-  private PrePath findPrePath(MetadataPath path, CommandContext ctx) {
-    List<String> rawPath = path.getPath();
-    var db = ctx.getDatabase();
-    String lastP = rawPath.remove(rawPath.size() - 1);
-    PrePath cand =
+  private PrePath findPrePath(IndexMetadataPath path, CommandContext ctx) {
+    var rawPath = path.getPath();
+    var lastP = rawPath.removeLast();
+    var cand =
         new PrePath() {
           {
-            chain = Optional.empty();
-            this.cl = ctx.getDatabase().getClass(ClassIndexFinder.this.clazz);
+            this.cl = ctx.getDatabaseSession().getMetadata().getImmutableSchemaSnapshot()
+                .getClassInternal(ClassIndexFinder.this.clazz);
             valid = true;
             last = lastP;
           }
         };
-    for (String ele : rawPath) {
-      SchemaPropertyInternal prop = (SchemaPropertyInternal) cand.cl.getProperty(ele);
+    for (var ele : rawPath) {
+      var prop = (SchemaPropertyInternal) cand.cl.getProperty(ele);
       if (prop != null) {
-        SchemaClass linkedClass = prop.getLinkedClass();
-        Collection<Index> indexes = prop.getAllIndexesInternal(db);
-        if (prop.getType().isLink() && linkedClass != null) {
-          boolean found = false;
-          for (Index index : indexes) {
-            if (index.getInternal().canBeUsedInEqualityOperators()) {
-              if (cand.chain.isPresent()) {
-                ((IndexCandidateChain) cand.chain.get()).add(index.getName());
+        var linkedClass = (SchemaClassInternal) prop.getLinkedClass();
+        var indexes = prop.getAllIndexesInternal();
+        if (PropertyTypeInternal.convertFromPublicType(prop.getType()).isLink()
+            && linkedClass != null) {
+          var found = false;
+          for (var index : indexes) {
+            if (index.canBeUsedInEqualityOperators()) {
+              if (cand.chain != null) {
+                ((IndexCandidateChain) cand.chain).add(index.getName());
               } else {
-                cand.chain = Optional.of(new IndexCandidateChain(index.getName()));
+                cand.chain = new IndexCandidateChain(index.getName());
               }
               cand.cl = linkedClass;
               found = true;
@@ -78,60 +76,64 @@ public class ClassIndexFinder implements IndexFinder {
   }
 
   @Override
-  public Optional<IndexCandidate> findExactIndex(MetadataPath path, Object value,
+  public IndexCandidate findExactIndex(IndexMetadataPath path, Object value,
       CommandContext ctx) {
-    PrePath pre = findPrePath(path, ctx);
+    var pre = findPrePath(path, ctx);
+
     if (!pre.valid) {
-      return Optional.empty();
+      return null;
     }
-    SchemaClass cl = pre.cl;
-    Optional<IndexCandidate> cand = pre.chain;
-    String last = pre.last;
+    var cl = pre.cl;
+    var cand = pre.chain;
+    var last = pre.last;
 
     var prop = (SchemaPropertyInternal) cl.getProperty(last);
     if (prop != null) {
-      Collection<Index> indexes = prop.getAllIndexesInternal(ctx.getDatabase());
-      for (Index index : indexes) {
-        if (index.getInternal().canBeUsedInEqualityOperators()) {
-          if (cand.isPresent()) {
-            ((IndexCandidateChain) cand.get()).add(index.getName());
-            ((IndexCandidateChain) cand.get()).setOperation(Operation.Eq);
+      var indexes = prop.getAllIndexesInternal();
+      for (var index : indexes) {
+        if (index.canBeUsedInEqualityOperators()) {
+          if (cand != null) {
+            ((IndexCandidateChain) cand).add(index.getName());
+            ((IndexCandidateChain) cand).setOperation(Operation.Eq);
             return cand;
           } else {
-            return Optional.of(new IndexCandidateImpl(index.getName(), Operation.Eq, prop));
+            return new IndexCandidateImpl(index.getName(), Operation.Eq, prop);
           }
         }
       }
     }
-    return Optional.empty();
+
+    return null;
   }
 
   @Override
-  public Optional<IndexCandidate> findByKeyIndex(MetadataPath path, Object value,
+  public IndexCandidate findByKeyIndex(IndexMetadataPath path, Object value,
       CommandContext ctx) {
-    PrePath pre = findPrePath(path, ctx);
+    var pre = findPrePath(path, ctx);
+
     if (!pre.valid) {
-      return Optional.empty();
+      return null;
     }
-    SchemaClass cl = pre.cl;
-    Optional<IndexCandidate> cand = pre.chain;
-    String last = pre.last;
+
+    var cl = pre.cl;
+    var cand = pre.chain;
+    var last = pre.last;
 
     var prop = (SchemaPropertyInternal) cl.getProperty(last);
     if (prop != null) {
       if (prop.getType() == PropertyType.EMBEDDEDMAP) {
-        Collection<Index> indexes = prop.getAllIndexesInternal(ctx.getDatabase());
-        for (Index index : indexes) {
-          if (index.getInternal().canBeUsedInEqualityOperators()) {
-            IndexDefinition def = index.getDefinition();
-            for (String o : def.getFieldsToIndex()) {
+        var indexes = prop.getAllIndexesInternal();
+        for (var index : indexes) {
+          if (index.canBeUsedInEqualityOperators()) {
+            var def = index.getDefinition();
+            for (var o : def.getFieldsToIndex()) {
               if (o.equalsIgnoreCase(last + " by key")) {
-                if (cand.isPresent()) {
-                  ((IndexCandidateChain) cand.get()).add(index.getName());
-                  ((IndexCandidateChain) cand.get()).setOperation(Operation.Eq);
+                if (cand != null) {
+                  ((IndexCandidateChain) cand).add(index.getName());
+                  ((IndexCandidateChain) cand).setOperation(Operation.Eq);
                   return cand;
                 } else {
-                  return Optional.of(new IndexCandidateImpl(index.getName(), Operation.Eq, prop));
+                  return new IndexCandidateImpl(index.getName(), Operation.Eq, prop);
                 }
               }
             }
@@ -139,65 +141,69 @@ public class ClassIndexFinder implements IndexFinder {
         }
       }
     }
-    return Optional.empty();
+
+    return null;
   }
 
   @Override
-  public Optional<IndexCandidate> findAllowRangeIndex(
-      MetadataPath path, Operation op, Object value, CommandContext ctx) {
-    PrePath pre = findPrePath(path, ctx);
+  public IndexCandidate findAllowRangeIndex(
+      IndexMetadataPath path, Operation op, Object value, CommandContext ctx) {
+    var pre = findPrePath(path, ctx);
+
     if (!pre.valid) {
-      return Optional.empty();
+      return null;
     }
-    SchemaClass cl = pre.cl;
-    Optional<IndexCandidate> cand = pre.chain;
-    String last = pre.last;
+    var cl = pre.cl;
+    var cand = pre.chain;
+    var last = pre.last;
 
     var prop = (SchemaPropertyInternal) cl.getProperty(last);
     if (prop != null) {
-      Collection<Index> indexes = prop.getAllIndexesInternal(ctx.getDatabase());
-      for (Index index : indexes) {
-        if (index.getInternal().canBeUsedInEqualityOperators()
+      var indexes = prop.getAllIndexesInternal();
+      for (var index : indexes) {
+        if (index.canBeUsedInEqualityOperators()
             && index.supportsOrderedIterations()) {
-          if (cand.isPresent()) {
-            ((IndexCandidateChain) cand.get()).add(index.getName());
-            ((IndexCandidateChain) cand.get()).setOperation(op);
+          if (cand != null) {
+            ((IndexCandidateChain) cand).add(index.getName());
+            ((IndexCandidateChain) cand).setOperation(op);
             return cand;
           } else {
-            return Optional.of(new IndexCandidateImpl(index.getName(), op, prop));
+            return new IndexCandidateImpl(index.getName(), op, prop);
           }
         }
       }
     }
-    return Optional.empty();
+    return null;
   }
 
   @Override
-  public Optional<IndexCandidate> findByValueIndex(MetadataPath path, Object value,
+  public IndexCandidate findByValueIndex(IndexMetadataPath path, Object value,
       CommandContext ctx) {
-    PrePath pre = findPrePath(path, ctx);
+    var pre = findPrePath(path, ctx);
+
     if (!pre.valid) {
-      return Optional.empty();
+      return null;
     }
-    SchemaClass cl = pre.cl;
-    Optional<IndexCandidate> cand = pre.chain;
-    String last = pre.last;
+
+    var cl = pre.cl;
+    var cand = pre.chain;
+    var last = pre.last;
 
     var prop = (SchemaPropertyInternal) cl.getProperty(last);
     if (prop != null) {
       if (prop.getType() == PropertyType.EMBEDDEDMAP) {
-        Collection<Index> indexes = prop.getAllIndexesInternal(ctx.getDatabase());
-        for (Index index : indexes) {
-          IndexDefinition def = index.getDefinition();
-          if (index.getInternal().canBeUsedInEqualityOperators()) {
-            for (String o : def.getFieldsToIndex()) {
+        var indexes = prop.getAllIndexesInternal();
+        for (var index : indexes) {
+          var def = index.getDefinition();
+          if (index.canBeUsedInEqualityOperators()) {
+            for (var o : def.getFieldsToIndex()) {
               if (o.equalsIgnoreCase(last + " by value")) {
-                if (cand.isPresent()) {
-                  ((IndexCandidateChain) cand.get()).add(index.getName());
-                  ((IndexCandidateChain) cand.get()).setOperation(Operation.Eq);
+                if (cand != null) {
+                  ((IndexCandidateChain) cand).add(index.getName());
+                  ((IndexCandidateChain) cand).setOperation(Operation.Eq);
                   return cand;
                 } else {
-                  return Optional.of(new IndexCandidateImpl(index.getName(), Operation.Eq, prop));
+                  return new IndexCandidateImpl(index.getName(), Operation.Eq, prop);
                 }
               }
             }
@@ -205,36 +211,7 @@ public class ClassIndexFinder implements IndexFinder {
         }
       }
     }
-    return Optional.empty();
-  }
 
-  @Override
-  public Optional<IndexCandidate> findFullTextIndex(
-      MetadataPath path, Object value, CommandContext ctx) {
-    PrePath pre = findPrePath(path, ctx);
-    if (!pre.valid) {
-      return Optional.empty();
-    }
-    SchemaClass cl = pre.cl;
-    Optional<IndexCandidate> cand = pre.chain;
-    String last = pre.last;
-
-    var prop = (SchemaPropertyInternal) cl.getProperty(last);
-    if (prop != null) {
-      Collection<Index> indexes = prop.getAllIndexesInternal(ctx.getDatabase());
-      for (Index index : indexes) {
-        if (SchemaClass.INDEX_TYPE.FULLTEXT.name().equalsIgnoreCase(index.getType())
-            && !index.getAlgorithm().equalsIgnoreCase("LUCENE")) {
-          if (cand.isPresent()) {
-            ((IndexCandidateChain) cand.get()).add(index.getName());
-            ((IndexCandidateChain) cand.get()).setOperation(Operation.FuzzyEq);
-            return cand;
-          } else {
-            return Optional.of(new IndexCandidateImpl(index.getName(), Operation.FuzzyEq, prop));
-          }
-        }
-      }
-    }
-    return Optional.empty();
+    return null;
   }
 }
