@@ -2,11 +2,9 @@ package com.jetbrains.youtrack.db.internal.core.sql.executor.metadata;
 
 import com.jetbrains.youtrack.db.api.schema.SchemaProperty;
 import com.jetbrains.youtrack.db.internal.core.command.CommandContext;
-import com.jetbrains.youtrack.db.internal.core.index.Index;
 import com.jetbrains.youtrack.db.internal.core.sql.executor.metadata.IndexFinder.Operation;
 import java.util.Collections;
 import java.util.List;
-import java.util.Optional;
 
 public class IndexCandidateImpl implements IndexCandidate {
 
@@ -20,12 +18,13 @@ public class IndexCandidateImpl implements IndexCandidate {
     this.property = prop;
   }
 
+  @Override
   public String getName() {
     return name;
   }
 
   @Override
-  public Optional<IndexCandidate> invert() {
+  public IndexCandidate invert() {
     if (this.operation == Operation.Ge) {
       this.operation = Operation.Lt;
     } else if (this.operation == Operation.Gt) {
@@ -35,20 +34,22 @@ public class IndexCandidateImpl implements IndexCandidate {
     } else if (this.operation == Operation.Lt) {
       this.operation = Operation.Ge;
     }
-    return Optional.of(this);
+    return this;
   }
 
+  @Override
   public Operation getOperation() {
     return operation;
   }
 
   @Override
-  public Optional<IndexCandidate> normalize(CommandContext ctx) {
-    Index index = ctx.getDatabase().getMetadata().getIndexManager().getIndex(name);
-    if (property.getName().equals(index.getDefinition().getFields().get(0))) {
-      return Optional.of(this);
+  public IndexCandidate normalize(CommandContext ctx) {
+    var session = ctx.getDatabaseSession();
+    var index = session.getSharedContext().getIndexManager().getIndex(name);
+    if (property.getName().equals(index.getDefinition().getProperties().getFirst())) {
+      return this;
     } else {
-      return Optional.empty();
+      return null;
     }
   }
 
