@@ -2,14 +2,12 @@ package com.jetbrains.youtrack.db.internal.core.sql.executor.metadata;
 
 import com.jetbrains.youtrack.db.api.schema.SchemaProperty;
 import com.jetbrains.youtrack.db.internal.core.command.CommandContext;
-import com.jetbrains.youtrack.db.internal.core.index.Index;
 import com.jetbrains.youtrack.db.internal.core.sql.executor.metadata.IndexFinder.Operation;
 import java.util.ArrayList;
 import java.util.Collection;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
-import java.util.Optional;
 
 public class MultipleIndexCanditate implements IndexCandidate {
 
@@ -32,17 +30,17 @@ public class MultipleIndexCanditate implements IndexCandidate {
 
   @Override
   public String getName() {
-    String name = "";
-    for (IndexCandidate indexCandidate : canditates) {
+    var name = "";
+    for (var indexCandidate : canditates) {
       name = indexCandidate.getName() + "|";
     }
     return name;
   }
 
   @Override
-  public Optional<IndexCandidate> invert() {
+  public IndexCandidate invert() {
     // TODO: when handling operator invert it
-    return Optional.of(this);
+    return this;
   }
 
   @Override
@@ -51,33 +49,32 @@ public class MultipleIndexCanditate implements IndexCandidate {
   }
 
   @Override
-  public Optional<IndexCandidate> normalize(CommandContext ctx) {
-    Collection<IndexCandidate> newCanditates = normalizeBetween(this.canditates, ctx);
+  public IndexCandidate normalize(CommandContext ctx) {
+    var newCanditates = normalizeBetween(this.canditates);
     newCanditates = normalizeComposite(newCanditates, ctx);
     if (newCanditates.isEmpty()) {
-      return Optional.empty();
+      return null;
     } else if (newCanditates.size() == 1) {
-      return Optional.of(newCanditates.iterator().next());
+      return newCanditates.iterator().next();
     } else {
-      return Optional.of(new MultipleIndexCanditate(newCanditates));
+      return new MultipleIndexCanditate(newCanditates);
     }
   }
 
-  private Collection<IndexCandidate> normalizeBetween(
-      List<IndexCandidate> canditates, CommandContext ctx) {
+  private static Collection<IndexCandidate> normalizeBetween(List<IndexCandidate> canditates) {
     List<IndexCandidate> newCanditates = new ArrayList<>();
-    for (int i = 0; i < canditates.size(); i++) {
-      boolean matched = false;
-      IndexCandidate canditate = canditates.get(i);
-      List<SchemaProperty> properties = canditate.properties();
-      for (int z = canditates.size() - 1; z > i; z--) {
-        IndexCandidate lastCandidate = canditates.get(z);
-        List<SchemaProperty> lastProperties = lastCandidate.properties();
+    for (var i = 0; i < canditates.size(); i++) {
+      var matched = false;
+      var canditate = canditates.get(i);
+      var properties = canditate.properties();
+      for (var z = canditates.size() - 1; z > i; z--) {
+        var lastCandidate = canditates.get(z);
+        var lastProperties = lastCandidate.properties();
         if (properties.size() == 1
             && lastProperties.size() == 1
-            && properties.get(0).getName() == lastProperties.get(0).getName()) {
+            && properties.getFirst().getName().equals(lastProperties.getFirst().getName())) {
           if (canditate.getOperation().isRange() || lastCandidate.getOperation().isRange()) {
-            newCanditates.add(new RangeIndexCanditate(canditate.getName(), properties.get(0)));
+            newCanditates.add(new RangeIndexCanditate(canditate.getName(), properties.getFirst()));
             canditates.remove(z);
             if (z != canditates.size()) {
               z++; // Increase so it does not decrease next iteration
@@ -95,15 +92,17 @@ public class MultipleIndexCanditate implements IndexCandidate {
 
   private Collection<IndexCandidate> normalizeComposite(
       Collection<IndexCandidate> canditates, CommandContext ctx) {
-    List<SchemaProperty> propeties = properties();
+    var session = ctx.getDatabaseSession();
+    var propeties = properties();
     Map<String, IndexCandidate> newCanditates = new HashMap<>();
-    for (IndexCandidate cand : canditates) {
+    for (var cand : canditates) {
       if (!newCanditates.containsKey(cand.getName())) {
-        Index index = ctx.getDatabase().getMetadata().getIndexManager().getIndex(cand.getName());
+        var index = session.getSharedContext().getIndexManager()
+            .getIndex(cand.getName());
         List<SchemaProperty> foundProps = new ArrayList<>();
-        for (String field : index.getDefinition().getFields()) {
-          boolean found = false;
-          for (SchemaProperty property : propeties) {
+        for (var field : index.getDefinition().getProperties()) {
+          var found = false;
+          for (var property : propeties) {
             if (property.getName().equals(field)) {
               found = true;
               foundProps.add(property);
@@ -129,7 +128,7 @@ public class MultipleIndexCanditate implements IndexCandidate {
   @Override
   public List<SchemaProperty> properties() {
     List<SchemaProperty> props = new ArrayList<>();
-    for (IndexCandidate cand : this.canditates) {
+    for (var cand : this.canditates) {
       props.addAll(cand.properties());
     }
     return props;
