@@ -1,93 +1,89 @@
 package com.jetbrains.youtrack.db.internal.core.command.script;
 
-import com.jetbrains.youtrack.db.internal.DbTestBase;
-import com.jetbrains.youtrack.db.internal.common.io.IOUtils;
 import com.jetbrains.youtrack.db.api.config.GlobalConfiguration;
 import com.jetbrains.youtrack.db.api.query.Result;
-import com.jetbrains.youtrack.db.api.query.ResultSet;
+import com.jetbrains.youtrack.db.internal.DbTestBase;
+import com.jetbrains.youtrack.db.internal.common.io.IOUtils;
 import com.jetbrains.youtrack.db.internal.core.db.YouTrackDBInternal;
+import com.jetbrains.youtrack.db.internal.core.db.YouTrackDBInternalEmbedded;
 import java.io.IOException;
-import java.io.InputStream;
 import java.util.Arrays;
-import java.util.Collection;
 import java.util.HashSet;
 import java.util.List;
-import java.util.stream.Collectors;
 import javax.script.ScriptException;
 import org.junit.Assert;
 import org.junit.Test;
 
-/**
- *
- */
 public class JSScriptTest extends DbTestBase {
-
   @Test
   public void jsSimpleTest() {
-    ResultSet resultSet = db.execute("javascript", "'foo'");
+    var resultSet = session.computeScript("javascript", "'foo'");
     Assert.assertTrue(resultSet.hasNext());
-    Result result = resultSet.next();
+    var result = resultSet.next();
     String ret = result.getProperty("value");
     Assert.assertEquals("foo", ret);
   }
 
   @Test
   public void jsQueryTest() {
-    String script = "db.query('select from OUser')";
-    ResultSet resultSet = db.execute("javascript", script);
+    session.begin();
+    var script = "db.query('select from OUser')";
+    var resultSet = session.computeScript("javascript", script);
     Assert.assertTrue(resultSet.hasNext());
 
-    List<Result> results = resultSet.stream().collect(Collectors.toList());
+    var results = resultSet.stream().toList();
     Assert.assertEquals(2, results.size()); // no default users anymore, 'admin' created
 
     results.stream()
-        .map(r -> r.getEntity().get())
+        .map(Result::asEntity)
         .forEach(
             oElement -> {
-              Assert.assertEquals("OUser", oElement.getSchemaType().get().getName());
+              Assert.assertEquals("OUser", oElement.getSchemaClassName());
             });
-
+    session.commit();
   }
 
   @Test
   public void jsScriptTest() throws IOException {
-    InputStream stream = ClassLoader.getSystemResourceAsStream("fixtures/scriptTest.js");
-    ResultSet resultSet = db.execute("javascript", IOUtils.readStreamAsString(stream));
+    var stream = ClassLoader.getSystemResourceAsStream("fixtures/scriptTest.js");
+    session.begin();
+    var resultSet = session.computeScript("javascript", IOUtils.readStreamAsString(stream));
     Assert.assertTrue(resultSet.hasNext());
 
-    List<Result> results = resultSet.stream().collect(Collectors.toList());
+    var results = resultSet.stream().toList();
     Assert.assertEquals(1, results.size());
 
-    Object value = results.get(0).getProperty("value");
-    Collection<Result> values = (Collection<Result>) value;
-    values.stream()
-        .map(r -> r.getEntity().get())
+    var linkList = results.getFirst().getLinkList("value");
+    linkList.stream()
+        .map(identifiable -> {
+          var transaction = session.getActiveTransaction();
+          return transaction.loadEntity(identifiable);
+        })
         .forEach(
-            oElement -> {
-              Assert.assertEquals("OUser", oElement.getSchemaType().get().getName());
+            entity -> {
+              Assert.assertEquals("OUser", entity.getSchemaClassName());
             });
-
+    session.commit();
   }
 
   @Test
   public void jsScriptCountTest() throws IOException {
-    InputStream stream = ClassLoader.getSystemResourceAsStream("fixtures/scriptCountTest.js");
-    ResultSet resultSet = db.execute("javascript", IOUtils.readStreamAsString(stream));
+    var stream = ClassLoader.getSystemResourceAsStream("fixtures/scriptCountTest.js");
+    var resultSet = session.computeScript("javascript", IOUtils.readStreamAsString(stream));
     Assert.assertTrue(resultSet.hasNext());
 
-    List<Result> results = resultSet.stream().collect(Collectors.toList());
+    var results = resultSet.stream().toList();
     Assert.assertEquals(1, results.size());
 
-    Number value = results.get(0).getProperty("value");
+    Number value = results.getFirst().getProperty("value");
     Assert.assertEquals(2, value.intValue()); // no default users anymore, 'admin' created
   }
 
   @Test
   public void jsSandboxTestWithJavaType() {
     try {
-      final ResultSet result =
-          db.execute(
-              "javascript", "var File = Java.type(\"java.io.File\");\n  File.pathSeparator;");
+      session.computeScript(
+          "javascript", "var File = Java.type(\"java.io.File\");\n  File.pathSeparator;");
 
       Assert.fail("It should receive a class not found exception");
     } catch (RuntimeException e) {
@@ -99,33 +95,18 @@ public class JSScriptTest extends DbTestBase {
     }
   }
 
-  // @Test
-  // THIS TEST WONT PASS WITH GRAALVM
-  public void jsSandboxWithNativeTest() {
-    ScriptManager scriptManager = YouTrackDBInternal.extract(context).getScriptManager();
-    try {
-      scriptManager.addAllowedPackages(new HashSet<>(List.of("java.lang.System")));
-
-      ResultSet resultSet =
-          db.execute(
-              "javascript", "var System = Java.type('java.lang.System'); System.nanoTime();");
-      Assert.assertEquals(0, resultSet.stream().count());
-    } finally {
-      scriptManager.removeAllowedPackages(new HashSet<>(List.of("java.lang.System")));
-    }
-  }
-
   @Test
   public void jsSandboxWithMathTest() {
-    ResultSet resultSet = db.execute("javascript", "Math.random()");
+    var resultSet = session.computeScript("javascript", "Math.random()");
     Assert.assertEquals(1, resultSet.stream().count());
     resultSet.close();
   }
 
   @Test
   public void jsSandboxWithDB() {
-    ResultSet resultSet =
-        db.execute(
+    session.begin();
+    var resultSet =
+        session.computeScript(
             "javascript",
             """
                 var rs = db.query("select from OUser");
@@ -136,16 +117,17 @@ public class JSScriptTest extends DbTestBase {
                 """);
     Assert.assertEquals(1, resultSet.stream().count());
     resultSet.close();
+    session.commit();
   }
 
   @Test
   public void jsSandboxWithBigDecimal() {
-    final ScriptManager scriptManager = YouTrackDBInternal.extract(context).getScriptManager();
+    final var scriptManager = ((YouTrackDBInternalEmbedded)YouTrackDBInternal.extract(youTrackDB)).getScriptManager();
     try {
       scriptManager.addAllowedPackages(new HashSet<>(List.of("java.math.BigDecimal")));
 
-      try (ResultSet resultSet =
-          db.execute(
+      try (var resultSet =
+          session.computeScript(
               "javascript",
               "var BigDecimal = Java.type('java.math.BigDecimal'); new BigDecimal(1.0);")) {
         Assert.assertEquals(1, resultSet.stream().count());
@@ -154,7 +136,7 @@ public class JSScriptTest extends DbTestBase {
       scriptManager.closeAll();
 
       try {
-        db.execute("javascript", "new java.math.BigDecimal(1.0);");
+        session.computeScript("javascript", "new java.math.BigDecimal(1.0);");
         Assert.fail("It should receive a class not found exception");
       } catch (RuntimeException e) {
         Assert.assertEquals(
@@ -167,7 +149,7 @@ public class JSScriptTest extends DbTestBase {
       scriptManager.addAllowedPackages(new HashSet<>(List.of("java.math.*")));
       scriptManager.closeAll();
 
-      try (ResultSet resultSet = db.execute("javascript", "new java.math.BigDecimal(1.0);")) {
+      try (var resultSet = session.computeScript("javascript", "new java.math.BigDecimal(1.0);")) {
         Assert.assertEquals(1, resultSet.stream().count());
       }
 
@@ -179,15 +161,15 @@ public class JSScriptTest extends DbTestBase {
 
   @Test
   public void jsSandboxWithYouTrackDb() {
-    try (ResultSet resultSet =
-        db.execute("javascript", "youtrackdb.getScriptManager().addAllowedPackages([])")) {
+    try (var resultSet =
+        session.computeScript("javascript", "youtrackdb.getScriptManager().addAllowedPackages([])")) {
       Assert.assertEquals(1, resultSet.stream().count());
     } catch (Exception e) {
       Assert.assertEquals(ScriptException.class, e.getCause().getClass());
     }
 
-    try (ResultSet resultSet =
-        db.execute(
+    try (var resultSet =
+        session.computeScript(
             "javascript",
             "youtrackdb.getScriptManager().addAllowedPackages([])")) {
       Assert.assertEquals(1, resultSet.stream().count());
