@@ -3,14 +3,14 @@ package com.jetbrains.youtrack.db.internal.core.serialization.serializer.result.
 import static org.junit.Assert.assertEquals;
 import static org.junit.Assert.assertNotNull;
 
+import com.jetbrains.youtrack.db.api.DatabaseType;
+import com.jetbrains.youtrack.db.api.YourTracks;
+import com.jetbrains.youtrack.db.api.common.query.BasicResult;
 import com.jetbrains.youtrack.db.api.config.YouTrackDBConfig;
 import com.jetbrains.youtrack.db.internal.DbTestBase;
-import com.jetbrains.youtrack.db.internal.core.db.DatabaseSessionInternal;
-import com.jetbrains.youtrack.db.api.DatabaseType;
-import com.jetbrains.youtrack.db.internal.core.db.YouTrackDBImpl;
+import com.jetbrains.youtrack.db.internal.core.db.DatabaseSessionEmbedded;
 import com.jetbrains.youtrack.db.internal.core.id.RecordId;
 import com.jetbrains.youtrack.db.internal.core.serialization.serializer.record.binary.BytesContainer;
-import com.jetbrains.youtrack.db.api.query.Result;
 import com.jetbrains.youtrack.db.internal.core.sql.executor.ResultInternal;
 import java.util.ArrayList;
 import java.util.Date;
@@ -41,10 +41,12 @@ public class ResultSerializationTest extends DbTestBase {
 
   @Test
   public void testSimpleSerialization() {
-    try (var youTrackDB = new YouTrackDBImpl("memory", YouTrackDBConfig.defaultConfig())) {
+    try (var youTrackDB = YourTracks.embedded(
+        DbTestBase.getBaseDirectoryPath(ResultSerializationTest.class),
+        YouTrackDBConfig.defaultConfig())) {
       youTrackDB.createIfNotExists("test", DatabaseType.MEMORY, "admin", "admin", "admin");
-      try (var db = (DatabaseSessionInternal) youTrackDB.open("test", "admin", "admin")) {
-        ResultInternal document = new ResultInternal(db);
+      try (var db = (DatabaseSessionEmbedded) youTrackDB.open("test", "admin", "admin")) {
+        var document = new ResultInternal(db);
 
         document.setProperty("name", "name");
         document.setProperty("age", 20);
@@ -53,12 +55,11 @@ public class ResultSerializationTest extends DbTestBase {
         document.setProperty("heigth", 12.5f);
         document.setProperty("bitHeigth", 12.5d);
         document.setProperty("class", (byte) 'C');
-        document.setProperty("character", 'C');
         document.setProperty("alive", true);
         document.setProperty("date", new Date());
         document.setProperty("recordId", new RecordId(10, 10));
 
-        ResultInternal extr = serializeDeserialize(db, document);
+        var extr = serializeDeserialize(db, document);
 
         assertEquals(extr.getPropertyNames(), document.getPropertyNames());
         assertEquals(extr.<String>getProperty("name"), document.getProperty("name"));
@@ -70,23 +71,25 @@ public class ResultSerializationTest extends DbTestBase {
         assertEquals(extr.<String>getProperty("class"), document.getProperty("class"));
         assertEquals(extr.<String>getProperty("alive"), document.getProperty("alive"));
         assertEquals(extr.<String>getProperty("date"), document.getProperty("date"));
+        assertEquals(extr.getLink("recordId"), document.getLink("recordId"));
       }
     }
   }
 
-  private ResultInternal serializeDeserialize(DatabaseSessionInternal db,
+  private static ResultInternal serializeDeserialize(DatabaseSessionEmbedded db,
       ResultInternal document) {
-    BytesContainer bytes = new BytesContainer();
-    serializer.serialize(document, bytes);
+    var bytes = new BytesContainer();
+    ResultSerializerNetwork.serialize(document, bytes, db.getDatabaseTimeZone());
     bytes.offset = 0;
-    return serializer.deserialize(db, bytes);
+    return ResultSerializerNetwork.deserialize(bytes, () -> new ResultInternal(db),
+        db.getDatabaseTimeZone());
   }
 
   @SuppressWarnings({"rawtypes", "unchecked"})
   @Test
   public void testSimpleLiteralList() {
 
-    ResultInternal document = new ResultInternal(db);
+    var document = new ResultInternal(session);
     List<String> strings = new ArrayList<>();
     strings.add("a");
     strings.add("b");
@@ -161,7 +164,7 @@ public class ResultSerializationTest extends DbTestBase {
     listMixed.add(null);
     document.setProperty("listMixed", listMixed);
 
-    Result extr = serializeDeserialize(db, document);
+    BasicResult extr = serializeDeserialize(session, document);
 
     assertEquals(extr.getPropertyNames(), document.getPropertyNames());
     assertEquals(extr.<String>getProperty("listStrings"), document.getProperty("listStrings"));
@@ -175,7 +178,7 @@ public class ResultSerializationTest extends DbTestBase {
 
   @Test
   public void testSimpleMapStringLiteral() {
-    ResultInternal document = new ResultInternal(db);
+    var document = new ResultInternal(session);
 
     Map<String, String> mapString = new HashMap<String, String>();
     mapString.put("key", "value");
@@ -217,7 +220,7 @@ public class ResultSerializationTest extends DbTestBase {
     bytesMap.put("key1", (byte) 11);
     document.setProperty("bytesMap", bytesMap);
 
-    Result extr = serializeDeserialize(db, document);
+    BasicResult extr = serializeDeserialize(session, document);
 
     assertEquals(extr.getPropertyNames(), document.getPropertyNames());
     assertEquals(extr.<String>getProperty("mapString"), document.getProperty("mapString"));
@@ -230,84 +233,84 @@ public class ResultSerializationTest extends DbTestBase {
 
   @Test
   public void testSimpleEmbeddedDoc() {
-    ResultInternal document = new ResultInternal(db);
-    ResultInternal embedded = new ResultInternal(db);
+    var document = new ResultInternal(session);
+    var embedded = new ResultInternal(session);
     embedded.setProperty("name", "test");
     embedded.setProperty("surname", "something");
     document.setProperty("embed", embedded);
 
-    Result extr = serializeDeserialize(db, document);
+    BasicResult extr = serializeDeserialize(session, document);
 
     assertEquals(document.getPropertyNames(), extr.getPropertyNames());
-    Result emb = extr.getProperty("embed");
+    BasicResult emb = extr.getResult("embed");
     assertNotNull(emb);
-    assertEquals(emb.<String>getProperty("name"), embedded.getProperty("name"));
-    assertEquals(emb.<String>getProperty("surname"), embedded.getProperty("surname"));
+    assertEquals(emb.getString("name"), embedded.getProperty("name"));
+    assertEquals(emb.getString("surname"), embedded.getProperty("surname"));
   }
 
   @Test
   public void testMapOfEmbeddedDocument() {
 
-    ResultInternal document = new ResultInternal(db);
+    var document = new ResultInternal(session);
 
-    ResultInternal embeddedInMap = new ResultInternal(db);
+    var embeddedInMap = new ResultInternal(session);
     embeddedInMap.setProperty("name", "test");
     embeddedInMap.setProperty("surname", "something");
-    Map<String, Result> map = new HashMap<String, Result>();
+    Map<String, BasicResult> map = new HashMap<String, BasicResult>();
     map.put("embedded", embeddedInMap);
     document.setProperty("map", map);
 
-    Result extr = serializeDeserialize(db, document);
+    BasicResult extr = serializeDeserialize(session, document);
 
-    Map<String, Result> mapS = extr.getProperty("map");
+    Map<String, BasicResult> mapS = extr.getProperty("map");
     assertEquals(1, mapS.size());
-    Result emb = mapS.get("embedded");
+    var emb = mapS.get("embedded");
     assertNotNull(emb);
-    assertEquals(emb.<String>getProperty("name"), embeddedInMap.getProperty("name"));
-    assertEquals(emb.<String>getProperty("surname"), embeddedInMap.getProperty("surname"));
+    assertEquals(emb.getString("name"), embeddedInMap.getProperty("name"));
+    assertEquals(emb.getString("surname"), embeddedInMap.getProperty("surname"));
   }
 
   @Test
   public void testCollectionOfEmbeddedDocument() {
 
-    ResultInternal document = new ResultInternal(db);
+    var document = new ResultInternal(session);
 
-    ResultInternal embeddedInList = new ResultInternal(db);
+    var embeddedInList = new ResultInternal(session);
     embeddedInList.setProperty("name", "test");
     embeddedInList.setProperty("surname", "something");
 
-    List<Result> embeddedList = new ArrayList<Result>();
+    List<BasicResult> embeddedList = new ArrayList<BasicResult>();
     embeddedList.add(embeddedInList);
     document.setProperty("embeddedList", embeddedList);
 
-    ResultInternal embeddedInSet = new ResultInternal(db);
+    var embeddedInSet = new ResultInternal(session);
     embeddedInSet.setProperty("name", "test1");
     embeddedInSet.setProperty("surname", "something2");
 
-    Set<Result> embeddedSet = new HashSet<>();
+    Set<BasicResult> embeddedSet = new HashSet<>();
     embeddedSet.add(embeddedInSet);
     document.setProperty("embeddedSet", embeddedSet);
 
-    Result extr = serializeDeserialize(db, document);
+    BasicResult extr = serializeDeserialize(session, document);
 
-    List<Result> ser = extr.getProperty("embeddedList");
+    var ser = extr.<BasicResult>getEmbeddedList("embeddedList");
     assertEquals(1, ser.size());
-    Result inList = ser.get(0);
+    var inList = ser.getFirst();
     assertNotNull(inList);
-    assertEquals(inList.<String>getProperty("name"), embeddedInList.getProperty("name"));
-    assertEquals(inList.<String>getProperty("surname"), embeddedInList.getProperty("surname"));
+    assertEquals(inList.getString("name"), embeddedInList.getProperty("name"));
+    assertEquals(inList.getString("surname"), embeddedInList.getProperty("surname"));
 
-    Set<Result> setEmb = extr.getProperty("embeddedSet");
+    var setEmb = extr.<BasicResult>getEmbeddedSet("embeddedSet");
     assertEquals(1, setEmb.size());
-    Result inSet = setEmb.iterator().next();
+    var inSet = setEmb.iterator().next();
     assertNotNull(inSet);
-    assertEquals(inSet.<String>getProperty("name"), embeddedInSet.getProperty("name"));
-    assertEquals(inSet.<String>getProperty("surname"), embeddedInSet.getProperty("surname"));
+    assertEquals(inSet.getString("name"), embeddedInSet.getProperty("name"));
+    assertEquals(inSet.getString("surname"), embeddedInSet.getProperty("surname"));
   }
 
   @Test
   public void testMetadataSerialization() {
-    ResultInternal document = new ResultInternal(db);
+    var document = new ResultInternal(session);
 
     document.setProperty("name", "foo");
 
@@ -321,7 +324,7 @@ public class ResultSerializationTest extends DbTestBase {
     document.setMetadata("alive", true);
     document.setMetadata("date", new Date());
 
-    ResultInternal extr = serializeDeserialize(db, document);
+    var extr = serializeDeserialize(session, document);
 
     assertEquals(extr.getPropertyNames(), document.getPropertyNames());
     assertEquals(extr.<String>getProperty("foo"), document.getProperty("foo"));
