@@ -15,36 +15,20 @@
  */
 package com.jetbrains.youtrack.db.auto;
 
-import com.jetbrains.youtrack.db.api.config.GlobalConfiguration;
-import com.jetbrains.youtrack.db.api.config.YouTrackDBConfig;
+import com.jetbrains.youtrack.db.api.record.Entity;
 import com.jetbrains.youtrack.db.api.record.Identifiable;
-import com.jetbrains.youtrack.db.api.record.RID;
 import com.jetbrains.youtrack.db.api.schema.PropertyType;
-import com.jetbrains.youtrack.db.api.schema.SchemaClass;
-import com.jetbrains.youtrack.db.internal.core.db.YouTrackDBConfigBuilderImpl;
-import com.jetbrains.youtrack.db.internal.core.record.impl.EntityImpl;
-import java.util.ArrayList;
 import java.util.Collection;
-import java.util.Collections;
-import java.util.HashSet;
 import java.util.List;
 import java.util.Map;
 import java.util.Objects;
 import java.util.Set;
 import org.testng.Assert;
 import org.testng.annotations.BeforeClass;
-import org.testng.annotations.Optional;
-import org.testng.annotations.Parameters;
 import org.testng.annotations.Test;
 
 @Test
 public class EntityTreeTest extends BaseDBTest {
-
-  @Parameters(value = "remote")
-  public EntityTreeTest(@Optional Boolean remote) {
-    super(remote != null && remote);
-  }
-
   @BeforeClass
   public void init() {
     createComplexTestClass();
@@ -54,78 +38,69 @@ public class EntityTreeTest extends BaseDBTest {
     createRefClasses();
   }
 
-  @Override
-  protected YouTrackDBConfig createConfig(YouTrackDBConfigBuilderImpl builder) {
-    builder.addGlobalConfigurationParameter(GlobalConfiguration.NON_TX_READS_WARNING_MODE,
-        "EXCEPTION");
-    return builder.build();
-  }
-
-
   @Test
   public void testPersonSaving() {
     addGaribaldiAndBonaparte();
 
-    database.begin();
+    session.begin();
     Assert.assertTrue(
-        database.query("select from Profile where nick = 'NBonaparte'").stream()
+        session.query("select from Profile where nick = 'NBonaparte'").stream()
             .findAny()
             .isPresent());
-    database.commit();
+    session.commit();
   }
 
   @Test(dependsOnMethods = "testPersonSaving")
   public void testCityEquality() {
-    database.begin();
-    List<EntityImpl> resultset =
+    session.begin();
+    var resultSet =
         executeQuery("select from profile where location.city.name = 'Rome'");
-    Assert.assertEquals(resultset.size(), 2);
+    Assert.assertEquals(resultSet.size(), 2);
 
-    var p1 = resultset.get(0);
-    var p2 = resultset.get(1);
+    var p1 = resultSet.get(0);
+    var p2 = resultSet.get(1);
 
     Assert.assertNotSame(p1, p2);
     Assert.assertSame(
-        p1.getElementProperty("location").getElementProperty("city"),
-        p2.getElementProperty("location").getElementProperty("city"));
-    database.commit();
+        p1.getEntity("location").getEntity("city"),
+        p2.getEntity("location").getEntity("city"));
+    session.commit();
   }
 
   @Test(dependsOnMethods = "testCityEquality")
   public void testSaveCircularLink() {
-    database.begin();
-    var winston = database.newInstance("Profile");
+    session.begin();
+    var winston = session.newEntity("Profile");
 
     winston.setProperty("nick", "WChurcill");
     winston.setProperty("name", "Winston");
     winston.setProperty("surname", "Churcill");
 
-    var country = database.newInstance("Country");
+    var country = session.newEntity("Country");
     country.setProperty("name", "England");
 
-    var city = database.newInstance("City");
+    var city = session.newEntity("City");
     city.setProperty("name", "London");
     city.setProperty("country", country);
 
-    var address = database.newInstance("Address");
+    var address = session.newEntity("Address");
     address.setProperty("type", "Residence");
     address.setProperty("city", city);
     address.setProperty("street", "unknown");
 
     winston.setProperty("location", address);
 
-    var nicholas = database.newInstance("Profile");
+    var nicholas = session.newEntity("Profile");
     nicholas.setProperty("nick", "NChurcill");
     nicholas.setProperty("name", "Nicholas");
     nicholas.setProperty("surname", "Churcill");
 
-    nicholas.setProperty("location", winston.getElementProperty("location"));
+    nicholas.setProperty("location", winston.getEntity("location"));
 
     nicholas.setProperty("invitedBy", winston);
     winston.setProperty("invitedBy", nicholas);
 
-    database.save(nicholas);
-    database.commit();
+    session.commit();
   }
 
   @Test(dependsOnMethods = "testSaveCircularLink")
@@ -136,78 +111,83 @@ public class EntityTreeTest extends BaseDBTest {
   @SuppressWarnings("unchecked")
   @Test(dependsOnMethods = "testSaveMultiCircular")
   public void testQueryMultiCircular() {
-    database.begin();
-    List<EntityImpl> result =
+    session.begin();
+    var resultSet =
         executeQuery("select * from Profile where name = 'Barack' and surname = 'Obama'");
 
-    Assert.assertEquals(result.size(), 1);
-    for (EntityImpl profile : result) {
-      final Collection<Identifiable> followers = profile.field("followers");
+    Assert.assertEquals(resultSet.size(), 1);
+    for (var result : resultSet) {
+      var profile = result.asEntityOrNull();
+      final Collection<Identifiable> followers = profile.getProperty("followers");
       if (followers != null) {
-        for (Identifiable follower : followers) {
+        for (var follower : followers) {
+          var transaction = session.getActiveTransaction();
           Assert.assertTrue(
               ((Collection<Identifiable>)
-                  Objects.requireNonNull(follower.getEntity().getProperty("followings")))
+                  Objects.requireNonNull(
+                      transaction.loadEntity(follower).getProperty("followings")))
                   .contains(profile));
         }
       }
     }
-    database.commit();
+    session.commit();
   }
 
   @Test
   public void testSetFieldSize() {
-    database.begin();
-    var test = database.newInstance("JavaComplexTestClass");
-    test.setProperty("set", new HashSet<>());
+    session.begin();
+    var test = session.newEntity("JavaComplexTestClass");
+    test.getOrCreateLinkSet("set");
 
-    for (int i = 0; i < 100; i++) {
-      var child = database.newInstance("Child");
+    for (var i = 0; i < 100; i++) {
+      var child = session.newEntity("Child");
       child.setProperty("name", String.valueOf(i));
       test.<Set<Identifiable>>getProperty("set").add(child);
     }
     Assert.assertNotNull(test.<Set<Identifiable>>getProperty("set"));
     Assert.assertEquals(test.<Set<Identifiable>>getProperty("set").size(), 100);
 
-    database.save(test);
-    database.commit();
+    session.commit();
 
     // Assert.assertEquals(test.<Set<Identifiable>>getProperty("set").size(), 100);
-    RID rid = test.getIdentity();
-    database.close();
-    database = createSessionInstance();
+    var rid = test.getIdentity();
+    session.close();
+    session = createSessionInstance();
 
-    database.begin();
-    test = database.load(rid);
+    session.begin();
+    test = session.load(rid);
     Assert.assertNotNull(test.<Set<Identifiable>>getProperty("set"));
-    for (Identifiable identifiable : test.<Set<Identifiable>>getProperty("set")) {
-      var child = identifiable.getEntity();
+    for (var identifiable : test.<Set<Identifiable>>getProperty("set")) {
+      var transaction = session.getActiveTransaction();
+      var child = transaction.loadEntity(identifiable);
       Assert.assertNotNull(child.<String>getProperty("name"));
       Assert.assertTrue(Integer.parseInt(child.getProperty("name")) < 100);
       Assert.assertTrue(Integer.parseInt(child.getProperty("name")) >= 0);
     }
     Assert.assertEquals(test.<Set<Identifiable>>getProperty("set").size(), 100);
-    database.delete(database.bindToSession(test));
-    database.commit();
+    var activeTx = session.getActiveTransaction();
+    session.delete(activeTx.<Entity>load(test));
+    session.commit();
   }
 
   @Test(dependsOnMethods = "testQueryMultiCircular")
   public void testCollectionsRemove() {
-    var a = database.newInstance("JavaComplexTestClass");
+    session.begin();
+    var a = session.newEntity("JavaComplexTestClass");
 
     // LIST TEST
-    var first = database.newInstance("Child");
+    var first = session.newEntity("Child");
     first.setProperty("name", "1");
-    var second = database.newInstance("Child");
+    var second = session.newEntity("Child");
     second.setProperty("name", "2");
-    var third = database.newInstance("Child");
+    var third = session.newEntity("Child");
     third.setProperty("name", "3");
-    var fourth = database.newInstance("Child");
+    var fourth = session.newEntity("Child");
     fourth.setProperty("name", "4");
-    var fifth = database.newInstance("Child");
+    var fifth = session.newEntity("Child");
     fifth.setProperty("name", "5");
 
-    var set = new HashSet<Identifiable>();
+    var set = session.newLinkSet();
     set.add(first);
     set.add(second);
     set.add(third);
@@ -216,7 +196,7 @@ public class EntityTreeTest extends BaseDBTest {
 
     a.setProperty("set", set);
 
-    var list = new ArrayList<Identifiable>();
+    var list = session.newLinkList();
     list.add(first);
     list.add(second);
     list.add(third);
@@ -231,121 +211,131 @@ public class EntityTreeTest extends BaseDBTest {
     Assert.assertEquals(a.<Set<Identifiable>>getProperty("set").size(), 4);
     Assert.assertEquals(a.<List<Identifiable>>getProperty("list").size(), 4);
 
-    database.begin();
-    a = database.save(a);
-    database.commit();
+    session.commit();
 
-    database.begin();
-    a = database.bindToSession(a);
-    RID rid = a.getIdentity();
+    session.begin();
+    var activeTx = session.getActiveTransaction();
+    a = activeTx.load(a);
+    var rid = a.getIdentity();
     Assert.assertEquals(a.<Set<Identifiable>>getProperty("set").size(), 4);
     Assert.assertEquals(a.<List<Identifiable>>getProperty("list").size(), 4);
-    database.commit();
+    session.commit();
 
-    database.close();
+    session.close();
 
-    database = createSessionInstance();
+    session = createSessionInstance();
 
-    database.begin();
-    var loadedObj = database.loadEntity(rid);
+    session.begin();
+    var loadedObj = session.loadEntity(rid);
 
     Assert.assertEquals(loadedObj.<Set<Object>>getProperty("set").size(), 4);
     Assert.assertEquals(loadedObj.<Set<Identifiable>>getProperty("set").size(), 4);
 
-    database.delete(rid);
-    database.commit();
+    session.delete(session.load(rid));
+    session.commit();
   }
 
   @Test
   public void childNLevelUpdateTest() {
-    database.begin();
-    var p = database.newInstance("Planet");
-    var near = database.newInstance("Planet");
-    var sat = database.newInstance("Satellite");
-    var satNear = database.newInstance("Satellite");
+    session.begin();
+    var p = session.newEntity("Planet");
+    var near = session.newEntity("Planet");
+    var sat = session.newEntity("Satellite");
+    var satNear = session.newEntity("Satellite");
     sat.setProperty("diameter", 50);
     sat.setProperty("near", near);
     satNear.setProperty("diameter", 10);
 
-    near.setProperty("satellites", Collections.singletonList(satNear));
-    p.setProperty("satellites", Collections.singletonList(sat));
+    near.setProperty("satellites", session.newLinkList(List.of(satNear)));
+    p.setProperty("satellites", session.newLinkSet(List.of(sat)));
 
-    database.save(p);
-    database.commit();
+    session.commit();
 
-    database.begin();
-    RID rid = p.getIdentity();
-    p = database.load(rid);
-    sat = p.<List<Identifiable>>getProperty("satellites").get(0).getEntity();
-    near = sat.getElementProperty("near");
-    satNear = near.<List<Identifiable>>getProperty("satellites").get(0).getEntity();
+    session.begin();
+    var rid = p.getIdentity();
+    p = session.load(rid);
+    Identifiable identifiable3 = p.<List<Identifiable>>getProperty("satellites").getFirst();
+    var transaction3 = session.getActiveTransaction();
+    sat = transaction3.loadEntity(identifiable3);
+    near = sat.getEntity("near");
+    Identifiable identifiable2 = near.<List<Identifiable>>getProperty("satellites").getFirst();
+    var transaction2 = session.getActiveTransaction();
+    satNear = transaction2.loadEntity(identifiable2);
     Assert.assertEquals(satNear.<Long>getProperty("diameter"), 10);
 
     satNear.setProperty("diameter", 100);
-    satNear.save();
 
-    database.save(p);
-    database.commit();
+    session.commit();
 
-    database.begin();
-    p = database.load(rid);
-    sat = p.<List<Identifiable>>getProperty("satellites").get(0).getEntity();
-    near = sat.getElementProperty("near");
-    satNear = near.<List<Identifiable>>getProperty("satellites").get(0).getEntity();
+    session.begin();
+    p = session.load(rid);
+    Identifiable identifiable1 = p.<List<Identifiable>>getProperty("satellites").getFirst();
+    var transaction1 = session.getActiveTransaction();
+    sat = transaction1.loadEntity(identifiable1);
+    near = sat.getEntity("near");
+    Identifiable identifiable = near.<List<Identifiable>>getProperty("satellites").getFirst();
+    var transaction = session.getActiveTransaction();
+    satNear = transaction.loadEntity(identifiable);
     Assert.assertEquals(satNear.<Long>getProperty("diameter"), 100);
-    database.commit();
+    session.commit();
   }
 
   @Test(dependsOnMethods = "childNLevelUpdateTest")
   public void childMapUpdateTest() {
-    database.begin();
-    var p = database.newInstance("Planet");
+    session.begin();
+    var p = session.newEntity("Planet");
     p.setProperty("name", "Earth");
     p.setProperty("distanceSun", 1000);
 
-    var sat = database.newInstance("Satellite");
+    var sat = session.newEntity("Satellite");
     sat.setProperty("diameter", 50);
     sat.setProperty("name", "Moon");
 
-    p.setProperty("satellitesMap", Collections.singletonMap(sat.<String>getProperty("name"), sat));
-    database.save(p);
-    database.commit();
+    p.setProperty("satellitesMap", session.newLinkMap(Map.of(sat.getString("name"), sat)));
+    session.commit();
 
-    database.begin();
-    p = database.bindToSession(p);
+    session.begin();
+    var activeTx = session.getActiveTransaction();
+    p = activeTx.load(p);
     Assert.assertEquals(p.<Integer>getProperty("distanceSun"), 1000);
     Assert.assertEquals(p.getProperty("name"), "Earth");
-    RID rid = p.getIdentity();
+    var rid = p.getIdentity();
 
-    p = database.load(rid);
-    sat = p.<Map<String, Identifiable>>getProperty("satellitesMap").get("Moon").getEntity();
+    p = session.load(rid);
+    Identifiable identifiable1 = p.<Map<String, Identifiable>>getProperty("satellitesMap")
+        .get("Moon");
+    var transaction1 = session.getActiveTransaction();
+    sat = transaction1.loadEntity(identifiable1);
     Assert.assertEquals(p.<Integer>getProperty("distanceSun"), 1000);
     Assert.assertEquals(p.getProperty("name"), "Earth");
     Assert.assertEquals(sat.<Long>getProperty("diameter"), 50);
     sat.setProperty("diameter", 500);
 
-    database.save(p);
-    database.commit();
+    session.commit();
 
-    database.begin();
-    p = database.load(rid);
-    sat = p.<Map<String, Identifiable>>getProperty("satellitesMap").get("Moon").getEntity();
+    session.begin();
+    p = session.load(rid);
+    Identifiable identifiable = p.<Map<String, Identifiable>>getProperty("satellitesMap")
+        .get("Moon");
+    var transaction = session.getActiveTransaction();
+    sat = transaction.loadEntity(identifiable);
     Assert.assertEquals(sat.<Long>getProperty("diameter"), 500);
     Assert.assertEquals(p.<Integer>getProperty("distanceSun"), 1000);
     Assert.assertEquals(p.getProperty("name"), "Earth");
-    database.commit();
+    session.commit();
   }
 
   @Test(dependsOnMethods = "childMapUpdateTest")
   public void childMapNLevelUpdateTest() {
-    var jupiter = database.newInstance("Planet");
+    session.begin();
+    var jupiter = session.newEntity("Planet");
     jupiter.setProperty("name", "Jupiter");
     jupiter.setProperty("distanceSun", 3000);
-    var mercury = database.newInstance("Planet");
+    var mercury = session.newEntity("Planet");
     mercury.setProperty("name", "Mercury");
     mercury.setProperty("distanceSun", 5000);
-    var jupiterMoon = database.newInstance("Satellite");
-    var mercuryMoon = database.newInstance("Satellite");
+    var jupiterMoon = session.newEntity("Satellite");
+    var mercuryMoon = session.newEntity("Satellite");
     jupiterMoon.setProperty("diameter", 50);
     jupiterMoon.setProperty("near", mercury);
     jupiterMoon.setProperty("name", "JupiterMoon");
@@ -354,29 +344,29 @@ public class EntityTreeTest extends BaseDBTest {
 
     mercury.setProperty(
         "satellitesMap",
-        Collections.singletonMap(mercuryMoon.<String>getProperty("name"), mercuryMoon));
+        session.newLinkMap(Map.of(mercuryMoon.getProperty("name"), mercuryMoon)));
     jupiter.setProperty(
         "satellitesMap",
-        Collections.singletonMap(jupiterMoon.<String>getProperty("name"), jupiterMoon));
+        session.newLinkMap(Map.of(jupiterMoon.getProperty("name"), jupiterMoon)));
 
-    database.begin();
-    database.save(jupiter);
-    database.commit();
+    session.commit();
 
-    database.begin();
-    RID rid = jupiter.getIdentity();
-    jupiter = database.load(rid);
+    session.begin();
+    var rid = jupiter.getIdentity();
+    jupiter = session.load(rid);
+    Identifiable identifiable3 = jupiter
+        .<Map<String, Identifiable>>getProperty("satellitesMap")
+        .get("JupiterMoon");
+    var transaction3 = session.getActiveTransaction();
     jupiterMoon =
-        jupiter
-            .<Map<String, Identifiable>>getProperty("satellitesMap")
-            .get("JupiterMoon")
-            .getEntity();
-    mercury = jupiterMoon.getElementProperty("near");
+        transaction3.loadEntity(identifiable3);
+    mercury = jupiterMoon.getEntity("near");
+    Identifiable identifiable2 = mercury
+        .<Map<String, Identifiable>>getProperty("satellitesMap")
+        .get("MercuryMoon");
+    var transaction2 = session.getActiveTransaction();
     mercuryMoon =
-        mercury
-            .<Map<String, Identifiable>>getProperty("satellitesMap")
-            .get("MercuryMoon")
-            .getEntity();
+        transaction2.loadEntity(identifiable2);
     Assert.assertEquals(mercuryMoon.<Long>getProperty("diameter"), 10);
     Assert.assertEquals(mercuryMoon.getProperty("name"), "MercuryMoon");
     Assert.assertEquals(jupiterMoon.<Long>getProperty("diameter"), 50);
@@ -386,25 +376,26 @@ public class EntityTreeTest extends BaseDBTest {
     Assert.assertEquals(mercury.getProperty("name"), "Mercury");
     Assert.assertEquals(mercury.<Integer>getProperty("distanceSun"), 5000);
     mercuryMoon.setProperty("diameter", 100);
-    database.save(jupiter);
-    database.commit();
+    session.commit();
 
-    database.close();
-    database = createSessionInstance();
+    session.close();
+    session = createSessionInstance();
 
-    database.begin();
-    jupiter = database.load(rid);
+    session.begin();
+    jupiter = session.load(rid);
+    Identifiable identifiable1 = jupiter
+        .<Map<String, Identifiable>>getProperty("satellitesMap")
+        .get("JupiterMoon");
+    var transaction1 = session.getActiveTransaction();
     jupiterMoon =
-        jupiter
-            .<Map<String, Identifiable>>getProperty("satellitesMap")
-            .get("JupiterMoon")
-            .getEntity();
-    mercury = jupiterMoon.getElementProperty("near");
+        transaction1.loadEntity(identifiable1);
+    mercury = jupiterMoon.getEntity("near");
+    Identifiable identifiable = mercury
+        .<Map<String, Identifiable>>getProperty("satellitesMap")
+        .get("MercuryMoon");
+    var transaction = session.getActiveTransaction();
     mercuryMoon =
-        mercury
-            .<Map<String, Identifiable>>getProperty("satellitesMap")
-            .get("MercuryMoon")
-            .getEntity();
+        transaction.loadEntity(identifiable);
     Assert.assertEquals(mercuryMoon.<Long>getProperty("diameter"), 100);
     Assert.assertEquals(mercuryMoon.getProperty("name"), "MercuryMoon");
     Assert.assertEquals(jupiterMoon.<Long>getProperty("diameter"), 50);
@@ -413,65 +404,63 @@ public class EntityTreeTest extends BaseDBTest {
     Assert.assertEquals(jupiter.<Integer>getProperty("distanceSun"), 3000);
     Assert.assertEquals(mercury.getProperty("name"), "Mercury");
     Assert.assertEquals(mercury.<Integer>getProperty("distanceSun"), 5000);
-    database.commit();
-    database.close();
+    session.commit();
+    session.close();
   }
 
   @Test
   public void iteratorShouldTerminate() {
-    database.begin();
+    session.begin();
 
-    var person = database.newEntity("Profile");
+    var person = session.newEntity("Profile");
     person.setProperty("nick", "Guy1");
     person.setProperty("name", "Guy");
     person.setProperty("surname", "Ritchie");
 
-    person = database.save(person);
-    database.commit();
+    person = person;
+    session.commit();
 
-    database.begin();
-    database.delete(database.bindToSession(person));
-    database.commit();
+    session.begin();
+    var activeTx = session.getActiveTransaction();
+    session.delete(activeTx.<Entity>load(person));
+    session.commit();
 
-    database.begin();
-    var person2 = database.newEntity("Profile");
+    session.begin();
+    var person2 = session.newEntity("Profile");
     person2.setProperty("nick", "Guy2");
     person2.setProperty("name", "Guy");
     person2.setProperty("surname", "Brush");
-    database.save(person2);
 
-    var it = database.browseClass("Profile");
+    var it = session.browseClass("Profile");
     while (it.hasNext()) {
       it.next();
     }
 
-    database.commit();
+    session.commit();
   }
 
   @Test
   public void testSave() {
-    database.begin();
-    var parent1 = database.newEntity("RefParent");
-    parent1 = database.save(parent1);
-    var parent2 = database.newEntity("RefParent");
-    parent2 = database.save(parent2);
+    session.begin();
+    var parent1 = session.newEntity("RefParent");
+    parent1 = parent1;
+    var parent2 = session.newEntity("RefParent");
+    parent2 = parent2;
 
-    var child1 = database.newEntity("RefChild");
-    parent1.setProperty("children", Collections.singleton(child1));
-    parent1 = database.save(parent1);
+    var child1 = session.newEntity("RefChild");
+    parent1.setProperty("children", session.newLinkSet(Set.of(child1)));
 
-    var child2 = database.newEntity("RefChild");
-    parent2.setProperty("children", Collections.singleton(child2));
-    database.save(parent2);
-    database.commit();
+    var child2 = session.newEntity("RefChild");
+    parent2.setProperty("children", session.newLinkSet(Set.of(child2)));
+    session.commit();
 
-    database.begin();
-    parent1 = database.load(parent1.getIdentity());
-    parent2 = database.load(parent2.getIdentity());
+    session.begin();
+    parent1 = session.load(parent1.getIdentity());
+    parent2 = session.load(parent2.getIdentity());
 
-    var child3 = database.newEntity("RefChild");
+    var child3 = session.newEntity("RefChild");
 
-    var otherThing = database.newEntity("OtherThing");
+    var otherThing = session.newEntity("OtherThing");
     child3.setProperty("otherThing", otherThing);
 
     otherThing.setProperty("relationToParent1", parent1);
@@ -480,54 +469,51 @@ public class EntityTreeTest extends BaseDBTest {
     parent1.<Set<Identifiable>>getProperty("children").add(child3);
     parent2.<Set<Identifiable>>getProperty("children").add(child3);
 
-    database.save(parent1);
-    database.save(parent2);
-
-    database.commit();
+    session.commit();
   }
 
   private void createCascadeDeleteClass() {
-    var schema = database.getSchema();
+    var schema = session.getSchema();
     if (schema.existsClass("JavaCascadeDeleteTestClass")) {
       schema.dropClass("JavaCascadeDeleteTestClass");
     }
 
     var child = schema.getClass("Child");
-    SchemaClass clazz = schema.createClass("JavaCascadeDeleteTestClass");
-    clazz.createProperty(database, "simpleClass", PropertyType.LINK,
+    var clazz = schema.createClass("JavaCascadeDeleteTestClass");
+    clazz.createProperty("simpleClass", PropertyType.LINK,
         schema.getClass("JavaSimpleTestClass"));
-    clazz.createProperty(database, "binary", PropertyType.LINK);
-    clazz.createProperty(database, "name", PropertyType.STRING);
-    clazz.createProperty(database, "set", PropertyType.LINKSET, child);
-    clazz.createProperty(database, "children", PropertyType.LINKMAP, child);
-    clazz.createProperty(database, "list", PropertyType.LINKLIST, child);
+    clazz.createProperty("binary", PropertyType.LINK);
+    clazz.createProperty("name", PropertyType.STRING);
+    clazz.createProperty("set", PropertyType.LINKSET, child);
+    clazz.createProperty("children", PropertyType.LINKMAP, child);
+    clazz.createProperty("list", PropertyType.LINKLIST, child);
   }
 
   private void createPlanetClasses() {
-    var schema = database.getSchema();
+    var schema = session.getSchema();
     var satellite = schema.createClass("Satellite");
     var planet = schema.createClass("Planet");
 
-    planet.createProperty(database, "name", PropertyType.STRING);
-    planet.createProperty(database, "distanceSun", PropertyType.INTEGER);
-    planet.createProperty(database, "satellites", PropertyType.LINKLIST, satellite);
-    planet.createProperty(database, "satellitesMap", PropertyType.LINKMAP, satellite);
+    planet.createProperty("name", PropertyType.STRING);
+    planet.createProperty("distanceSun", PropertyType.INTEGER);
+    planet.createProperty("satellites", PropertyType.LINKLIST, satellite);
+    planet.createProperty("satellitesMap", PropertyType.LINKMAP, satellite);
 
-    satellite.createProperty(database, "name", PropertyType.STRING);
-    satellite.createProperty(database, "diameter", PropertyType.LONG);
-    satellite.createProperty(database, "near", PropertyType.LINK, planet);
+    satellite.createProperty("name", PropertyType.STRING);
+    satellite.createProperty("diameter", PropertyType.LONG);
+    satellite.createProperty("near", PropertyType.LINK, planet);
   }
 
   private void createRefClasses() {
-    var schema = database.getSchema();
+    var schema = session.getSchema();
     var refParent = schema.createClass("RefParent");
     var refChild = schema.createClass("RefChild");
     var otherThing = schema.createClass("OtherThing");
 
-    refParent.createProperty(database, "children", PropertyType.LINKSET, refChild);
-    refChild.createProperty(database, "otherThing", PropertyType.LINK, otherThing);
+    refParent.createProperty("children", PropertyType.LINKSET, refChild);
+    refChild.createProperty("otherThing", PropertyType.LINK, otherThing);
 
-    otherThing.createProperty(database, "relationToParent1", PropertyType.LINK, refParent);
-    otherThing.createProperty(database, "relationToParent2", PropertyType.LINK, refParent);
+    otherThing.createProperty("relationToParent1", PropertyType.LINK, refParent);
+    otherThing.createProperty("relationToParent2", PropertyType.LINK, refParent);
   }
 }
