@@ -15,57 +15,44 @@
  */
 package com.jetbrains.youtrack.db.auto;
 
-import com.jetbrains.youtrack.db.api.exception.DatabaseException;
 import com.jetbrains.youtrack.db.api.schema.PropertyType;
 import com.jetbrains.youtrack.db.api.schema.SchemaClass;
-import com.jetbrains.youtrack.db.internal.core.index.Index;
-import com.jetbrains.youtrack.db.internal.core.record.RecordInternal;
 import com.jetbrains.youtrack.db.internal.core.record.impl.EntityImpl;
-import com.jetbrains.youtrack.db.internal.core.sql.query.SQLSynchQuery;
-import java.util.List;
-import java.util.Set;
 import org.testng.Assert;
-import org.testng.annotations.Optional;
-import org.testng.annotations.Parameters;
 import org.testng.annotations.Test;
 
 @Test
 public class GEOTest extends BaseDBTest {
 
-  @Parameters(value = "remote")
-  public GEOTest(@Optional Boolean remote) {
-    super(remote != null && remote);
-  }
-
   @Test
   public void geoSchema() {
-    final SchemaClass mapPointClass = database.getMetadata().getSchema().createClass("MapPoint");
-    mapPointClass.createProperty(database, "x", PropertyType.DOUBLE)
-        .createIndex(database, SchemaClass.INDEX_TYPE.NOTUNIQUE);
-    mapPointClass.createProperty(database, "y", PropertyType.DOUBLE)
-        .createIndex(database, SchemaClass.INDEX_TYPE.NOTUNIQUE);
+    final var mapPointClass = session.getMetadata().getSchema().createClass("MapPoint");
+    mapPointClass.createProperty("x", PropertyType.DOUBLE)
+        .createIndex(SchemaClass.INDEX_TYPE.NOTUNIQUE);
+    mapPointClass.createProperty("y", PropertyType.DOUBLE)
+        .createIndex(SchemaClass.INDEX_TYPE.NOTUNIQUE);
 
-    final Set<Index> xIndexes =
-        database.getMetadata().getSchema().getClassInternal("MapPoint")
-            .getInvolvedIndexesInternal(database, "x");
+    final var xIndexes =
+        session.getMetadata().getSchema().getClassInternal("MapPoint")
+            .getInvolvedIndexesInternal(session, "x");
     Assert.assertEquals(xIndexes.size(), 1);
 
-    final Set<Index> yIndexes =
-        database.getMetadata().getSchema().getClassInternal("MapPoint")
-            .getInvolvedIndexesInternal(database, "y");
+    final var yIndexes =
+        session.getMetadata().getSchema().getClassInternal("MapPoint")
+            .getInvolvedIndexesInternal(session, "y");
     Assert.assertEquals(yIndexes.size(), 1);
   }
 
   @Test(dependsOnMethods = "geoSchema")
   public void checkGeoIndexes() {
-    final Set<Index> xIndexes =
-        database.getMetadata().getSchema().getClassInternal("MapPoint").
-            getInvolvedIndexesInternal(database, "x");
+    final var xIndexes =
+        session.getMetadata().getSchema().getClassInternal("MapPoint").
+            getInvolvedIndexesInternal(session, "x");
     Assert.assertEquals(xIndexes.size(), 1);
 
-    final Set<Index> yIndexDefinitions =
-        database.getMetadata().getSchema().getClassInternal("MapPoint")
-            .getInvolvedIndexesInternal(database, "y");
+    final var yIndexDefinitions =
+        session.getMetadata().getSchema().getClassInternal("MapPoint")
+            .getInvolvedIndexesInternal(session, "y");
     Assert.assertEquals(yIndexDefinitions.size(), 1);
   }
 
@@ -73,66 +60,61 @@ public class GEOTest extends BaseDBTest {
   public void queryCreatePoints() {
     EntityImpl point;
 
-    for (int i = 0; i < 10000; ++i) {
-      point = new EntityImpl();
-      point.setClassName("MapPoint");
+    for (var i = 0; i < 10000; ++i) {
+      session.begin();
+      point = ((EntityImpl) session.newEntity("MapPoint"));
 
-      point.field("x", (52.20472d + i / 100d));
-      point.field("y", (0.14056d + i / 100d));
+      point.setProperty("x", 52.20472d + i / 100d);
+      point.setProperty("y", 0.14056d + i / 100d);
 
-      database.begin();
-      point.save();
-      database.commit();
+      session.commit();
     }
   }
 
   @Test(dependsOnMethods = "queryCreatePoints")
   public void queryDistance() {
-    Assert.assertEquals(database.countClass("MapPoint"), 10000);
+    Assert.assertEquals(session.countClass("MapPoint"), 10000);
 
-    List<EntityImpl> result =
-        database
-            .command(
-                new SQLSynchQuery<EntityImpl>(
-                    "select from MapPoint where distance(x, y,52.20472, 0.14056 ) <= 30"))
-            .execute(database);
+    var result =
+        session
+            .query(
+                "select from MapPoint where distance(x, y,52.20472, 0.14056 ) <= 30").toList();
+    Assert.assertFalse(result.isEmpty());
 
-    Assert.assertTrue(result.size() != 0);
-
-    for (EntityImpl d : result) {
-      Assert.assertEquals(d.getClassName(), "MapPoint");
-      Assert.assertEquals(RecordInternal.getRecordType(d), EntityImpl.RECORD_TYPE);
+    for (var d : result) {
+      Assert.assertEquals(d.asEntity().getSchemaClassName(), "MapPoint");
+      Assert.assertEquals(((EntityImpl) d.asEntity()).getRecordType(), EntityImpl.RECORD_TYPE);
     }
   }
 
   @Test(dependsOnMethods = "queryCreatePoints")
   public void queryDistanceOrdered() {
-    Assert.assertEquals(database.countClass("MapPoint"), 10000);
+    session.begin();
+    Assert.assertEquals(session.countClass("MapPoint"), 10000);
 
     // MAKE THE FIRST RECORD DIRTY TO TEST IF DISTANCE JUMP IT
-    List<EntityImpl> result =
-        database.command(new SQLSynchQuery<EntityImpl>("select from MapPoint limit 1"))
-            .execute(database);
+    var resultSet =
+        session.execute("select from MapPoint limit 1").toList();
     try {
-      result.get(0).field("x", "--wrong--");
+      resultSet.getFirst().asEntityOrNull().setProperty("x", "--wrong--");
       Assert.fail();
-    } catch (DatabaseException e) {
+    } catch (NumberFormatException e) {
       Assert.assertTrue(true);
     }
 
-    result =
+    resultSet =
         executeQuery(
             "select distance(x, y,52.20472, 0.14056 ) as distance from MapPoint order by"
                 + " distance desc");
 
-    Assert.assertTrue(result.size() != 0);
+    Assert.assertFalse(resultSet.isEmpty());
 
     Double lastDistance = null;
-    for (EntityImpl d : result) {
-      if (lastDistance != null && d.field("distance") != null) {
-        Assert.assertTrue(((Double) d.field("distance")).compareTo(lastDistance) <= 0);
+    for (var result : resultSet) {
+      if (lastDistance != null && result.getProperty("distance") != null) {
+        Assert.assertTrue(((Double) result.getProperty("distance")).compareTo(lastDistance) <= 0);
       }
-      lastDistance = d.field("distance");
+      lastDistance = result.getProperty("distance");
     }
   }
 }
